--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -16750,13 +16750,50 @@
 			<p class="footnote">1. Pour <em>ⲱⲡⲧ</em> «charger».</p>
 			<p><em>ⲁⲛⲟⲕ ⲇⲉ ϯⲛⲁⲧⲁⲙⲱⲧⲉⲛ ⲱ ⲛⲁⲥⲛⲏⲟⲩ ϫⲉ ⲁϣ ⲧⲉ ϯⲕⲩⲃⲱⲧⲟⲥ ⲓⲉ ⲡⲉ ⲟⲩ ⲛⲓⲁⲃⲓⲛ. ϯⲕⲩⲃⲱⲧⲟⲥ ⲇⲉ ⲧⲥⲁⲣⲝ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ ⲑⲁⲓ ⲉⲧⲉ ⲙ̀ⲡⲓⲉⲣⲟⲓⲕⲟⲓⲛⲟⲙⲓⲛ ⲙ̀ⲙⲟⲥ ⲛ̀ⲕⲁⲗⲱⲥ. ⲛⲓⲁⲃⲓⲛ ⲇⲉ ⲡⲉ ⲡⲁϩⲏⲧ ⲫⲁⲓ ⲉⲧⲉ ⲙ̀ⲙⲟⲛ ⲉⲙⲓ ⲛ̀ϧⲏⲧϥ ⲟⲩⲇⲉ ⲛⲏⲃⲓ ⲉⲡϣⲱⲓ ⲟⲩⲟϩ ⲡⲓⲛⲏⲃⲓ ⲉⲡϣⲱⲓ ⲉ ϯⲥⲱⲟⲩⲛ ⲙ̀ⲙⲟϥ ⲁⲛ ⲛⲁⲓ ⲛⲉ ⲛⲓⲅⲣⲁⲫⲏ ⲉⲧⲉ ⲙ̀ⲡⲓⲥⲟⲩⲟⲛⲟⲩ. ⲉⲑⲃⲉ ⲫⲁⲓ ⲛ̀ⲑⲱⲧⲉⲛ ⲧⲉⲧⲉⲛⲥⲁϫⲓ ⲛⲉⲙⲏⲓ ⲙ̀ⲫⲟⲟⲩ ϩⲓⲛⲁ ⲉⲑⲣⲓⲉⲣⲥⲁⲡϣⲱⲓ ⲛ̀ⲧⲁϫⲟⲙ ⲙⲁⲗⲓⲥⲧⲁ ⲫⲏ ⲉ ⲧⲉⲧⲉⲛⲉⲣⲁⲛⲁⲅⲕⲁⲍⲓⲛ ⲙ̀ⲙⲟⲓ ⲉⲑⲣⲓⲥⲁϫⲓ ⲉ ⲡⲉϥⲧⲁⲓⲟ ⲛⲉⲙ ⲫⲁ ⲡⲉϥϭⲟⲓⲥ ⲟⲩⲉⲃⲟⲗϧⲉⲛ ⲡⲕⲁϩⲓ ⲛⲉⲙⲁⲛ ⲁⲛ ⲡⲉ ⲁⲗⲗⲁ ⲟⲩⲉⲃⲟⲗϧⲉⲛ ⲧⲫⲉ ⲡⲉ. ⲛ̀ⲟⲩⲥⲁⲣⲕⲓⲛⲟⲛ ⲁⲛ ⲡⲉ ⲁⲗⲗⲁ ⲟⲩⲁⲥⲱⲙⲁⲧⲟⲥ ⲡⲉ ⲟⲩⲟⲩⲱⲓⲛⲓ ⲡⲉ. ⲟⲩⲑⲁⲙⲓⲟ ⲁⲛ ⲡⲉ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲟⲙⲓ ⲁⲗⲗⲁ ⲟⲩⲡ︤ⲛ︦ⲁ︥ ⲉϥⲟⲩⲁⲃ ⲡⲉ ⲛ̀ⲟⲩⲉⲃⲟⲗ ϧⲉⲛ ⲛⲓⲇⲓⲁⲕⲱⲛ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ⲁⲛ ⲡⲉ ⲁⲗⲗⲁ ⲟⲩⲇⲓⲁⲕⲱⲛ ⲉⲃⲟⲗ ϧⲉⲛ ⲟⲩϣⲁϩ ⲛ̀ϩⲣⲱⲙ.</em></p>
 			<p><em>ⲟⲩⲁⲣⲭⲱⲛ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ⲁⲛ ⲡⲉ ⲁⲗⲗⲁ ⲟⲩⲁⲣⲭⲏⲁⲅⲅⲉⲗⲟⲥ ⲛ̀ⲧⲉ ⲧϫⲟⲙ ⲛ̀ⲧⲉ ⲛⲓⲫⲏⲟⲩⲓ ⲡⲉ. ⲛ̀ⲟⲩⲁⲣⲭⲏⲥⲧⲣⲁⲧⲩⲅⲟⲩⲥ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ⲁⲛ ⲡⲉ ⲫⲁⲓ ⲉⲧⲉϥⲛⲁⲕⲟⲣϥϥ ⲛ̀ϫⲉ ⲡⲉϥⲟⲩⲣⲟ ϧⲉⲛ ⲡⲓⲛⲁⲩ ⲉⲧⲉϥⲟⲩⲱϣ ⲁⲗⲗⲁ ⲟⲩⲁⲣⲭⲏⲥⲧⲣⲁⲧⲩⲅⲟⲩⲥ ⲛ̀ⲧⲉ ⲧϫⲟⲙ ⲛ̀ⲛⲓⲫⲏⲟⲩⲓ ϥⲙⲏⲛ ⲉⲃⲟⲗ ⲛⲉⲙ ⲡⲉϥⲟⲩⲣⲟ ϣⲁ ⲉⲛⲉϩ. ⲁϥⲥⲁϫⲓ ⲁⲛ ϧⲁ ⲡⲧⲁⲕⲟ ⲛ̀ⲛⲓⲯⲩⲭⲏ ⲁⲗⲗⲁ ⲟⲩⲣⲉϥⲉⲣⲡⲣⲉⲥⲃⲉⲩⲓⲛ ϧⲁ ⲡⲛⲟϩⲉⲙ ⲛ̀ⲛⲉⲛⲯⲏⲭⲏ ⲛⲉⲙ ⲛⲉⲛⲥⲱⲙⲁ ⲛ̀ⲥⲏⲟⲩ ⲛⲓⲃⲉⲛ ϧⲁⲧⲉⲛ ⲫϯ ⲡⲉⲛⲣⲉϥⲑⲁⲙⲓⲟ. ⲛ̀ⲟⲩⲣⲉϥⲥⲉⲙⲓ ⲁⲛ ⲁⲗⲗⲁ ⲟⲩϥⲁⲓⲣⲱⲟⲩϣ ϧⲁ ⲡⲧⲏⲣϥ. ⲛ̀ⲟⲩⲙⲁⲥⲧⲉⲣⲱⲙⲓ ⲁⲛ ⲁⲗⲗⲁ ⲟⲩⲙⲉⲛⲣⲓⲧ ⲛ̀ⲧⲉ ⲧϩⲓⲕⲱⲛ ⲙ̀ⲫϯ ⲧⲏⲣⲟⲩ. ⲛ̀ⲟⲩϫⲁϫⲓ ⲛ̀ⲧⲁⲛ ⲁⲛ ⲡⲉ ⲁⲗⲗⲁ ϥⲟⲓ ⲛ̀ϩⲓⲣⲏⲛⲏ ⲛⲉⲙ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ. ⲛ̀ⲟⲩⲁⲧⲛⲁⲓ ⲁⲛ ⲡⲉ ⲁⲗⲗⲁ ⲟⲩⲣⲉϥϣⲉⲛϩⲏⲧ ⲡⲉ ⲉⲣⲉ ⲑⲙⲉⲧⲛⲁⲏⲧ ⲙ̀ⲫϯ ϣⲟⲡ ⲛ̀ϧⲏⲧϥ ϫⲉ ⲫⲏ ⲉⲧⲉⲣⲉⲧⲓⲛ ϣⲁϥϭⲓ ⲫⲏ ⲉⲧⲕⲱϯ ϣⲁϥϫⲓⲙⲓ ⲟⲩⲟϩ ⲫⲏ ⲉⲧⲕⲱⲗϩ ⲥⲉⲛⲁⲟⲩⲱⲛ ⲛⲁϥ.</em></p>
-			<p><em></em></p>
-			<p><em></em></p>
+			<p><em>ⲟⲩⲟϩ ⲁⲛⲟⲕ ϩⲱ ⲉⲧⲁⲓⲛⲁⲩ ⲉ ⲧϫⲓⲛϯ ⲙ̀ⲡⲁϭⲥ ϧⲉⲛ ⲟⲩⲣⲁϣⲓ ⲁⲓϩⲓⲧⲟⲧ ⲟⲩⲛ ⲉⲣⲟϥ ⲙ̀ⲫⲟⲟⲩ ⲁⲧϭⲛⲉ ⲙⲉⲧⲁⲣⲕⲟⲥ. ⲉⲓⲉⲣⲉⲧⲓⲛ ϩⲓⲛⲁ ⲛ̀ⲧⲁϭⲓ ⲛ̀ⲟⲩⲙⲏϣ ⲟⲩⲟϩ ⲉⲓⲕⲱⲗϩ ϩⲓⲛⲁ ⲛ̀ⲥⲉⲁⲟⲩⲱⲛ ⲛⲏⲓ ⲁⲗⲗⲁ ϥⲛⲁϫⲟⲥ<sup class="footnote">1</sup>: ⲛⲑⲟⲕ ⲱ ⲫⲏ ⲉⲑⲙⲉϩ ⲛ̀ⲁⲣⲉⲧⲏ ⲟⲩⲟϩ ϥⲙⲉⲓ ⲛ̀ϯⲥⲃⲱ ϫⲉ ⲟⲩ ϩⲁⲣⲁ ⲡⲉ ⲉⲧⲉⲕϣⲓⲛⲓ ⲛ̀ⲥⲱϥ ⲛ̀ⲧⲟⲧϥ ⲙ̀ⲫⲟⲟⲩ ⲙ̀ⲉⲛⲉⲛⲥⲁ ⲑⲣⲉⲕⲉⲣϣⲟⲣⲡ ⲛ̀ⲧⲉⲕϫⲱ. ⲁⲕⲕⲏⲛ ⲛ̀ϫⲱ ⲛ̀ⲟⲩⲉⲩⲉⲅⲕⲱⲙⲓⲟⲛ ⲉϫⲉⲛ ϯⲣⲟⲙⲡⲓ ⲙ̀ⲃⲉⲣⲓ ⲛⲉⲙ ⲧⲁⲣⲭⲏ ⲛ̀ⲛⲓϣⲁⲓ ⲛ̀ⲧⲉ ⲡϭⲥ ⲧⲏⲣⲟⲩ ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲟⲩⲛ ⲁⲕϫⲱ ⲛ̀ⲕⲉⲗⲟⲅⲟⲥ ⲉϫⲉⲛ ⲫⲏ ⲉⲧⲉ ⲙ̀ⲡⲉ ⲟⲩⲟⲛ ⲧⲱⲛϥ ϧⲉⲛ ⲛⲓⲙⲓⲥⲓ ⲛ̀ⲧⲉ ⲛⲓϩⲓⲟⲙⲓ ⲉⲛⲁⲁϥ ⲉϩⲟⲧⲉⲣⲟϥ ⲡⲥⲩⲛⲅⲉⲛⲏⲥ ⲙ̀ⲡⲭ︤ⲥ︥ ⲡⲓⲁⲅⲓⲟⲥ ⲓⲱⲁⲛⲛⲏⲥ ⲡⲓⲣⲉϥϯⲱⲙⲥ ⲡϣⲫⲏⲣ ⲙ̀ ⲡⲓⲡⲁⲧϣⲉⲗⲉⲧ ⲉⲑⲟⲩⲁⲃ. ⲙⲏ ⲕⲉⲙⲓ ⲁⲛ ⲱ ⲡⲁⲓⲱⲧ ϫⲉ ⲛⲁⲛⲉ ⲡⲓϣⲓ ϧⲉⲛ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲙ̀ⲫⲣⲏϯ ⲉ ⲁⲕⲟⲩⲱⲙ ⲓⲉ ⲛ̀ⲧⲉⲕⲥⲱ ⲓⲉ ⲛ̀ⲧⲉⲕϣⲗⲏⲗ ⲭⲁⲟⲩⲁϣ ⲡⲓϣⲓ ϧⲉⲛ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲙ̀ⲫⲣⲏϯ ⲉⲧⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ⲛ̀ϫⲉ ⲡⲉⲛⲥⲁϧ ⲛ̀ⲁⲡⲟⲥⲧⲟⲗⲟⲥ ⲡⲁⲩⲗⲟⲥ ϫⲉ ϯⲁⲥⲕⲩⲥⲓⲥ ⲛ̀ⲧⲉ ⲫϯ ⲟⲩⲛⲓϣϯ ⲡⲉ ϧⲉⲛ ⲡⲓϩⲏⲟⲩ ⲁⲕϣⲁⲛϫⲱⲕ ⲉⲃⲟⲗ ⲛ̀ⲧⲉⲕⲧⲱⲟⲩⲛ ϧⲁⲣⲟⲥ.</em></p>
+			<p><em>ⲁⲛⲟⲕ ⲇⲉ ϯⲛⲁⲉⲣⲟⲩⲱ ⲛⲁⲕ ⲟⲩⲟϩ ⲛ̀ⲧⲁϫⲟⲥ ⲛⲁⲕ ⲱ ⲡⲁⲙⲉⲛⲣⲓⲧ ϫⲉ ⲁⲕⲥⲁϫⲓ ⲛ̀ⲕⲁⲗⲱⲥ ⲟⲩⲟϩ ⲁⲕⲟⲩⲱⲛϩ ⲛ̀ⲟⲩϥⲓⲣⲱⲟⲩϣ ⲉⲃⲟⲗ ⲁⲗⲗⲁ ϯⲛⲁⲉⲣⲧⲟⲗⲙⲁⲛ ⲟⲩⲟϩ ⲛ̀ⲧⲁϫⲟⲥ ⲙ̀ⲫⲣⲏϯ ⲙ̀ⲡϣⲫⲏⲣ ⲙ̀ⲡϭⲥ ⲁⲃⲣⲁⲁⲙ ⲡⲁⲣⲭⲱⲛ ⲛ̀ⲛⲓⲡⲁⲧⲣⲓⲁⲣⲭⲏⲥ ⲫⲏ ⲉⲧⲁϥⲉⲣⲓⲱⲧ ⲛ̀ⲟⲩⲙⲏϣ ⲛ̀ⲉⲑⲛⲟⲥ ⲉⲧⲁϥϫⲟⲥ ⲙ̀ⲫϯ ϫⲉ ⲓⲥϫⲉ ⲟⲩⲟⲛ ϣϫⲟⲙ ⲛ̀ⲥⲁϫⲓ ⲛⲉⲙ ⲡⲁϭⲥ ⲙ̀ⲡⲁⲓⲕⲉⲥⲟⲛ ⲟⲩⲟϩ ⲕⲁⲛ ⲫⲁⲓ ⲟⲩϩⲟⲩⲟⲥⲁϫⲓ ⲛ̀ⲧⲏⲓ ⲉⲑⲣⲓⲧⲉⲛⲑⲱⲛⲧ ⲉ ⲡϣⲫⲏⲣ ⲛ̀ⲫϯ ⲁⲗⲗⲁ ⲁⲛⲟⲕ ⲉⲓⲉⲉⲣⲧⲟⲗⲙⲁⲛ ϣⲁ ⲅ̅ ⲛ̀ⲥⲟⲡ ϩⲱⲗⲟⲥ ⲟⲩⲟϩ ϥⲛⲁⲧⲁⲥⲑⲟⲓ ⲁⲛ. ϫⲉ ⲟⲩⲏⲓ ⲛ̀ⲑⲟϥ ⲡⲉ ⲟⲩⲛⲟⲩϯ ⲛ̀ⲟⲩⲱⲧ ⲟⲩⲟϩ ⲟⲩϭⲥ ⲛ̀ⲟⲩⲱⲧ ⲟⲩⲟϩ ⲑⲱϥ ⲧⲉ ϯⲙⲉⲧϣⲁⲛⲁϩⲑⲏϥ ⲉⲑⲙⲏⲛ ⲉⲃⲟⲗ ϣⲁ ⲉⲛⲉϩ. ϧⲉⲛ ⲫⲁⲓ ϯⲑⲱⲧ ⲙ̀ⲡⲉⲕϩⲏⲧ ϫⲉ ⲫϯ ⲫⲏ ⲉⲧⲁϥϩⲟⲛϩⲉⲛ ⲛⲁⲛ ϫⲉ ⲛ̀ⲧⲉⲛⲉⲣⲉⲧⲓⲛ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛϭⲓ ⲙ̀ⲙⲟⲛ ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲧⲉⲧⲉⲛⲉⲣⲉⲧⲓⲛ ⲙ̀ⲙⲟⲓ ⲉⲑⲣⲓⲣⲁⲃⲱ ϧⲉⲛ ⲧⲉⲧⲉⲛⲙⲏϯ ϧⲉⲛ ⲡⲁⲓⲛⲓϣϯ ⲛ̀ϣⲁⲓ ⲉⲧⲫⲱⲣϣ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲕⲟⲥⲙⲟⲥ ⲧⲏⲣϥ ⲙ̀ⲙⲁⲩⲁⲧϥ ⲁⲛ ⲁⲗⲗⲁ ⲛⲉⲙ ϧⲉⲛ ⲛⲓⲫⲏⲟⲩⲓ. ⲟⲩⲟϩ ⲛ̀ⲑⲱⲧⲉⲛ ⲧⲉⲧⲉⲛⲱϣ ⲉⲃⲟⲗ ⲉϫⲱⲓ ⲛⲓⲕⲟⲩϫⲓ ⲛⲉⲙ ⲛⲓⲛⲓϣϯ ⲛⲓϩⲱⲟⲩⲧ ⲛⲉⲙ ⲛⲓϩⲓⲟⲙⲓ ⲉⲣⲉⲧⲉⲛϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲧⲉⲛϯϩⲟ ⲉⲣⲟⲕ ⲙ̀ⲡⲉⲣⲭⲁⲣⲱⲕ ⲉⲃⲟⲗ ϩⲁ ⲡⲁⲓⲛⲓϣϯ ⲛ̀ϣⲓⲛⲓ ⲟⲩⲟϩ ⲛ̀ⲧⲉⲕⲧⲁⲙⲟⲛ ⲉ ⲡⲁⲓⲛⲓϣϯ ⲛ̀ϣⲁⲓ ⲛⲉⲙ ⲡⲧⲁⲓⲟ ⲙ̀ⲫⲏ ⲉⲧⲟⲩⲉⲣϣⲁⲓ ⲛⲁϥ ⲛ̀ϧⲏⲧϥ ⲫⲁⲓ ⲉⲧⲉⲣⲡⲣⲉⲥⲃⲉⲩⲓⲛ ϧⲁⲣⲟⲛ ⲧⲏⲣⲉⲛ ϧⲁⲧⲉⲛ ⲫϯ.</em></p>
 			<p class="footnote">1. «Mais, dira (le contradicteur)».</p>
 			<p>Martyre de Saint Macaire d'Antioche<sup class="footnote">1</sup>.</p>
 			<p>I</p>
-			<p><em></em></p>
+			<p><em>Ⲡⲓⲁⲅⲓⲟⲥ ⲇⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲛⲁϥⲭⲏ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ ⲡⲉ ⲉϥⲧⲱⲃϩ ⲙ̀ⲫϯ ⲙ̀ⲡⲓⲉ̀ϩⲟⲟⲩ ⲛⲉⲙ ⲡⲓⲉ̀ϫⲱⲣϩ ⲟⲩⲟϩ ⲉⲧⲁϥⲉⲙⲓ ϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲛⲁⲥⲱⲧⲉⲙ ⲉⲣⲟϥ ⲁϥⲧⲱⲃϩ ϧⲉⲛ ⲡⲉϥϩⲏⲧ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲡⲁϭⲥ ⲡⲭ︤ⲥ︥ ⲙ̀ⲡⲉⲣⲟⲩⲉⲓ ⲥⲁⲃⲟⲗ ⲙ̀ⲙⲟⲓ ⲁⲗⲗⲁ ⲟϩⲓ ⲉⲣⲁⲧⲕ ⲛⲉⲙⲏⲓ ⲁⲛⲟⲕ ϧⲁ ⲡⲉⲕⲃⲱⲕ.</em></p>
 			<p class="footnote">1. Les actes des Martyrs de l'Egypte, par <i>Henri Hyvernat</i>. Paris 1886.</p>
+			<p><em>ⲛⲓϩⲏⲅⲉⲙⲱⲛ ⲇⲉ ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲉⲑⲣⲟⲩⲓⲛⲓ ⲛⲁϥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲟⲩⲟϩ ⲁⲩⲉⲛϥ ⲙⲡⲉϥⲙ̀ⲑⲟ ⲉⲃⲟⲗ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲛ̀ⲑⲟⲕ ⲡⲉ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲡⲓⲙⲁⲅⲟⲥ ⲫⲏ ⲉⲧϣⲱϣ ⲛ̀ⲛⲓⲛⲟⲩϯ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲉⲕϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ϩⲁⲛⲛⲟⲩϯ ⲁⲛ ⲛⲉ ⲉⲕⲉⲣⲙⲁⲅⲓⲁ ϧⲉⲛ ⲟⲩ. ⲙⲁⲧⲁⲙⲟⲓ ⲙ̀ⲡⲁϯⲉⲣⲃⲁⲥⲁⲛⲓⲍⲓⲛ ⲙ̀ⲙⲟⲕ ⲱ ⲡⲓⲧⲁⲗⲉⲡⲱⲣⲟⲥ ⲓⲉ ⲉⲕⲉⲣⲑⲁⲣⲓⲛ ⲛ̀ⲟⲩ ⲓⲉ ⲉⲕⲛⲁϩϯ ⲉⲟⲩ. ⲙⲁⲧⲁⲙⲟⲓ ϧⲉⲛ ⲟⲩⲙⲉⲑⲙⲏⲓ ⲙ̀ⲡⲁϯⲉⲣⲃⲁⲥⲁⲛⲓⲍⲓⲛ ⲙ̀ⲙⲟⲕ ⲟⲩⲟϩ ⲛ̀ⲧⲉⲕⲙⲟⲩ ϧⲉⲛ ⲛⲁϫⲓϫ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓⲙⲁⲕⲁⲣⲓⲟⲥ ⲙ̀ⲡⲓϩⲏⲅⲉⲙⲱⲛ ϫⲉ ⲁⲛⲟⲕ ⲟⲩⲙⲁⲅⲟⲥ ⲁⲛ ⲟⲩⲇⲉ ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲁ ⲡⲁⲓⲱⲧ ϧⲟⲕⲧ ⲙ̀ⲙⲁⲧⲟⲓ ϯⲉⲙⲓ ⲉⲣⲟϥ ⲁⲛ ⲟⲩⲇⲉ ⲟⲛ ⲓⲥϫⲉⲛ ⲉⲧⲁⲓⲉⲣⲙⲁⲧⲟⲓ ⲙ̀ⲡⲉ ⲡⲁϩⲏⲧ ⲙ̀ⲧⲟⲛ ⲉⲣⲟⲓ.</em></p>
+			<p><em>ⲉⲩⲧⲩⲭⲓⲁⲛⲟⲥ ⲇⲉ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲙ̀ⲡⲉⲕⲉⲣⲑⲩⲥⲓⲁ ⲓⲥϫⲉⲛ ϣⲟⲣⲡ ⲛ̀ⲧⲉⲕⲉⲣ ⲉⲃⲟⲗ ⲉ ⲛⲁⲓϧⲓⲥⲓ ⲧⲏⲣⲟⲩ ϯⲛⲟⲩ ϫⲉ ⲁⲣⲓⲑⲩⲥⲓⲁ ϩⲏⲡⲡⲉ ⲙ̀ⲙⲟⲛ ⲙⲏϣ ⲛ̀ⲣⲱⲙⲓ ⲕⲱϯ ⲉⲣⲟϥ ⲉⲃⲏⲗ ⲉ ⲛⲁⲓⲙⲁⲧⲟⲓ ⲙ̀ⲙⲁⲩⲁⲧⲟⲩ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲛⲁϥ ϫⲉ ⲟⲩⲕⲟⲩⲛ ⲉⲓϣⲓⲡⲓ ϧⲁⲧϩⲏ ⲛ̀ⲛⲓⲙⲏϣ ⲙ̀ⲡⲓⲉⲣⲑⲩⲥⲓⲁ, ⲙ̀ⲙⲟⲛ, ⲁⲗⲗⲁ ⲉⲓⲉⲣϩⲟϯ ⲛ̀ⲑⲟϥ ϧⲁⲧϩⲏ ⲙ̀ⲫϯ ⲛ̀ⲧⲉ ⲧⲫⲉ ⲡⲁϭⲟⲓⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲛⲁϥ ϫⲉ ⲙⲏ ⲉⲧⲁⲩⲉⲛⲕ ⲉ ⲡⲁⲓⲙⲁ ⲉϫⲉ ⲟⲩⲙⲏϣ ⲛ̀ⲥⲁϫⲓ ⲁⲗⲗⲁ ⲟⲩϩⲱⲃ ⲛ̀ⲕⲉⲫⲁⲗⲉⲟⲛ ⲡⲉ ⲉϯⲉⲣⲭⲣⲓⲁ ⲙ̀ⲙⲟⲕ ⲛ̀ϧⲏⲧϥ ⲉⲧⲉ ⲫⲁⲓ ⲡⲉ ⲉⲑⲣⲉⲕⲉⲣⲑⲩⲥⲓⲁ ⲛ̀ⲛⲓⲛⲟⲩϯ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲛ̀ⲧⲁⲭⲁⲕ ⲉⲃⲟⲗ ⲛ̀ⲧⲉⲕϣⲉ ⲛⲁⲕ ⲉⲧⲉⲕⲡⲟⲗⲓⲥ ϧⲉⲛ ⲟⲩϩⲓⲣⲏⲛⲏ.</em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲡⲓⲁⲧϩⲏⲧ ⲉⲛⲁⲓⲟⲩⲱϣ ⲉ ⲉⲣⲑⲩⲥⲓⲁ ⲡⲉ ⲛⲁⲩⲛⲁⲟⲩⲟⲣⲡⲧ ⲛⲁⲕ ⲁⲛ ⲡⲉ ⲉⲡⲁⲓⲙⲁ.</em></p>
+			<p><em>ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲇⲉ ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲉⲑⲣⲟⲩⲓⲛⲓ ⲛ̀ⲛⲉϥϫⲓϫ ϩⲓⲫⲁϩⲟⲩ ⲙ̀ⲙⲟϥ ⲛ̀ⲥⲉⲥⲱⲗⲡ ⲙ̀ⲡⲉϥⲗⲁⲥ ⲉⲃⲟⲗ ⲛⲉⲙ ⲛⲉϥⲧⲏⲃ ⲟⲩⲟϩ ⲁϥⲑⲣⲟⲩⲓⲛⲓ ⲛ̀ⲛⲉϥⲁⲛⲁⲅⲕⲉⲟⲛ ⲉⲃⲟⲗ ⲁϥⲑⲣⲟⲩϫⲉϣ ϩⲉⲙϫ ⲉϧⲣⲏⲓ ⲉϫⲱⲟⲩ ⲟⲩⲟϩ ⲁϥⲑⲣⲟⲩⲫⲱⲣϣ ϧⲁⲣⲟϥ ⲛ̀ϩⲁⲛⲛⲓϥⲧ ⲙ̀ⲃⲉⲛⲓⲡⲓ ⲉⲩⲗⲟⲃϣ ⲛ̀ⲭⲣⲱⲙ ⲟⲩⲟϩ ⲛ̀ⲥⲉⲥⲕⲉⲣⲕⲉⲣ ⲙ̀ⲙⲟϥ ⲉϩⲱⲟⲩ ⲟⲩⲟϩ ⲁϥⲑⲣⲟⲩⲓⲛⲓ ⲛ̀ϩⲁⲛⲕⲣⲉⲁⲅⲣⲁ ⲉⲩⲙⲉϩ ⲛ̀ⲗⲁⲙϫⲁⲡⲧ ⲁⲩϣⲟⲩⲟ ⲉϧⲣⲏⲓ ⲉϫⲱϥ ⲁⲩⲓⲛⲓ ⲇⲉ ⲟⲛ ⲛ̀ⲕⲉⲥⲁϩ ⲥⲛⲁⲩ ⲙ̀ⲃⲉⲛⲓⲡⲓ ⲉⲩⲗⲟⲃϣ ϧⲉⲛ ⲟⲩⲭⲣⲱⲙ ⲁⲩϩⲓⲧⲟⲩ ⲉϧⲣⲏⲓ ⲉⲧⲉϥϣⲃⲱⲃⲓ.</em></p>
+			<p><em>ⲡⲓⲁⲅⲓⲟⲥ ⲇⲉ ⲙ̀ⲡⲉϥϣϥⲁⲓ ϧⲁ ⲛⲁⲓⲃⲁⲥⲁⲛⲟⲥ ⲧⲏⲣⲟⲩ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁϥϯ ⲙ̀ⲡⲓⲡ︤ⲛ︦ⲁ︥. ⲡⲓⲁⲛⲟⲙⲟⲥ ⲇⲉ ⲛ̀ⲁⲥⲉⲃⲏⲥ ⲁϥⲑⲣⲟⲩⲱⲗⲓ ⲙ̀ⲡⲉϥⲥⲱⲙⲁ ϩⲓϫⲉⲛ ⲟⲩⲕⲟⲡⲣⲓⲁ ⲥⲁⲃⲟⲗ ⲛ̀ϯⲃⲁⲕⲓ ⲡϣⲁϯ ⲁⲩⲥⲁⲧϥ ⲉⲃⲟⲗ ⲙ̀ⲙⲁⲩ.</em></p>
+			<p><em>ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲇⲉ ϩⲏⲡⲡⲉ ⲓⲥ ⲡϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲡϣⲏⲣⲓ ⲙ̀ⲫϯ ⲉⲧⲟⲛϧ ⲁϥⲓ̀ ⲉⲃⲟⲗ ϧⲉⲛ ⲧⲫⲉ ⲛⲉⲙ ⲛⲉϥⲁⲅⲅⲉⲗⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲁϥⲟϩⲓ ⲉⲣⲁⲧϥ ⲥⲁⲡϣⲱⲓ ⲙ̀ⲙⲟϥ ⲁϥⲙⲟⲩϯ ⲉϫⲱϥ ⲛ̀ⲅ̅ ⲛ̀ⲥⲟⲡ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲙⲁⲕⲁⲣⲓ ⲙⲁⲕⲁⲣⲓ ⲡⲁϣⲱⲓϫ ⲛ̀ⲁⲧϧⲓⲥⲓ ⲡⲁⲟⲓⲕⲟⲛⲟⲙⲟⲥ ⲛ̀ⲥⲁⲃⲉ ⲡⲁⲕⲩⲣⲓⲝ ⲛ̀ⲣⲉⲙⲛ̀ϩⲏⲧ ⲡⲁⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲧϫⲉⲙϫⲟⲙ ϯⲱⲣⲕ ⲙ̀ⲙⲟⲓ ⲙ̀ⲙⲓⲛⲙ̀ⲙⲟⲓ ϫⲉ ϯⲛⲁϯⲱⲟⲩ ⲛⲁⲕ ϩⲓϫⲉⲛ ⲡⲕⲁϩⲓ ⲛⲉⲙ ϧⲉⲛ ⲧⲫⲉ ⲙ̀ⲫⲣⲏϯ ⲙ̀ⲃⲓⲕⲧⲱⲣ ⲡϣⲏⲣⲓ ⲛ̀ⲣⲱⲙⲁⲛⲟⲥ ⲟⲩⲟϩ ⲁ ⲡⲓⲥⲱⲧⲏⲣ ⲛ̀ⲁⲅⲁⲑⲟⲥ ⲛⲓϥⲓ ⲉϧⲟⲩⲛ ϧⲉⲛ ⲡⲉϥϩⲟ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ϭⲓ ⲛⲁⲕ ⲛ̀ⲟⲩⲡ︤ⲛ︦ⲁ︥ ⲉϥⲟⲩⲁⲃ.</em></p>
+			<p><em>ⲥⲁⲧⲟⲧϥ ⲁϥⲧⲱⲛϥ ⲁϥⲟϩⲓ ⲉⲣⲁⲧϥ ⲙ̀ⲙⲟⲛ ϩⲗⲓ ⲙ̀ⲡⲉⲧϩⲱⲟⲩ ϣⲟⲡ ⲙ̀ⲙⲟϥ ⲁⲛ ⲉⲡⲧⲏⲣϥ ⲟⲩⲟϩ ⲁ ⲡⲓⲥⲱⲧⲏⲣ ⲉⲣⲁⲥⲡⲁⲍⲉⲥⲑⲉ ⲙ̀ⲙⲟϥ ⲁϥϣⲉ ⲛⲁϥ ⲉ ⲛⲓⲫⲏⲟⲩⲓ ϧⲉⲛ ⲟⲩⲱⲟⲩ ⲛⲉⲙ ⲛⲉϥⲁⲅⲅⲉⲗⲟⲥ ⲉⲑⲟⲩⲁⲃ.</em></p>
+			<p><em>ⲡⲓⲁⲅⲓⲟⲥ ⲇⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲁϥⲓ̀ ⲉϧⲟⲩⲛ ⲉϯⲡⲟⲗⲓⲥ ⲡϣⲁϯ ⲉϥⲙⲟϣⲓ ϧⲉⲛ ⲛⲓⲡⲗⲁⲧⲓⲁ ⲛ̀ⲧⲉ ϯⲃⲁⲕⲓ ⲁⲩⲓⲛⲓ ⲉⲃⲟⲗ ⲛ̀ⲟⲩⲣⲉϥⲙⲱⲟⲩⲧ ⲉϥⲧⲁⲗⲏⲟⲩⲧ ⲉϫⲉⲛ ⲟⲩϭⲗⲟϫ ⲟⲩⲟϩ ⲛⲁⲣⲉ ⲡϩⲟⲩⲟ ⲛ̀ϯⲃⲁⲕⲓ ⲱϣ ⲉⲃⲟⲗ ⲉⲩⲣⲓⲙⲓ ⲡⲉ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲛ̀ⲛⲏ ⲉⲧⲧⲱⲟⲩⲛⲟⲩ ⲙ̀ⲡⲓϭⲗⲟϫ ϫⲉ ⲭⲱ ⲙ̀ⲡⲁⲓⲥⲱⲙⲁ ⲉϧⲣⲏⲓ ⲛ̀ⲧⲁⲑⲣⲉ ⲡⲱⲟⲩ ⲙ̀ⲡⲁϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲟⲩⲱⲛϩ ⲉⲃⲟⲗ ϧⲉⲛ ⲧⲁⲓⲃⲁⲕⲓ ⲙ̀ⲫⲟⲟⲩ ⲙ̀ⲡⲉⲙⲑⲟ ⲛ̀ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲑⲟⲩⲏⲧ.</em></p>
+			<p><em>ⲛ̀ⲑⲟϥ ⲇⲉ ⲁϥⲫⲱⲣϣ ⲛ̀ⲛⲉϥϫⲓϫ ⲉⲃⲟⲗ ⲁϥⲉⲣⲡⲣⲟⲥⲉⲩⲭⲉⲥⲑⲉ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲁϥϫⲱ ⲉⲙⲙⲟⲥ<sup class="footnote">1</sup> ϫⲉ ⲡⲁϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲡⲓⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲙ̀ⲙⲁⲩⲁⲧϥ ⲉⲁⲩⲉⲣⲥⲧⲁⲩⲣⲱⲛⲓⲛ ⲙ̀ⲙⲟϥ ⲉϩⲣⲏⲓ ⲉϫⲱⲛ ⲛⲁϩⲣⲉⲛ ⲡⲟⲛⲧⲓⲟⲥ ⲡⲓⲗⲁⲧⲟⲥ ⲫⲏ ⲉⲧⲁϥⲙⲟⲩϯ ⲉ ⲗⲁⲍⲁⲣⲟⲥ ϧⲉⲛ ⲧⲥⲙⲏ ⲛ̀ⲧⲉ ⲧⲉϥⲙⲉⲧⲛⲟⲩϯ ⲁϥⲧⲟⲩⲛⲟⲥϥ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲏ ⲉⲑⲙⲱⲟⲩⲧ ⲙⲉⲛⲉⲛⲥⲁ ⲇ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲉϥⲭⲏ ϧⲉⲛ ⲡⲓⲧⲁⲫⲟⲥ. ⲫⲏ ⲉⲧⲁϥⲧⲟⲩⲛⲟⲥ ⲡϣⲏⲣⲓ ⲛ̀ϯⲭⲏⲣⲁ ⲉⲧϧⲉⲛ ⲛⲁⲓⲛ ⲉⲩⲱⲗⲓ ⲙ̀ⲙⲟϥ ⲉⲃⲟⲗ ⲉ ⲑⲟⲙⲥϥ ⲫⲏ ⲉⲧⲁϥⲟⲩⲱⲛ ⲛ̀ⲛⲉⲛⲃⲁⲗ ⲛ̀ⲛⲓⲃⲉⲗⲗⲉⲩ ⲁϥⲧⲟⲩⲃⲟ ⲛ̀ⲛⲓⲕⲁⲕⲥⲉϩⲧ ϩⲓⲧⲉⲛ ⲡⲓⲥⲁϫⲓ ⲛ̀ⲧⲉ ⲣⲱϥ ϯⲛⲟⲩ ⲇⲉ ⲡⲁϭⲥ ⲉⲕⲉⲧⲟⲩⲛⲟⲥ ⲡⲁⲓⲣⲉϥⲙⲱⲟⲩⲧ ⲫⲁⲓ ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡⲁⲓⲙⲏϣ ⲧⲏⲣϥ ϩⲓⲛⲁ ⲛ̀ⲧⲉϥⲉⲣⲙⲉⲑⲣⲉ ⲛ̀ⲛⲏ ⲉⲧⲁϥⲛⲁⲩ ⲉⲣⲱⲟⲩ ϧⲉⲛ ⲁⲙⲉⲛϯ.</em></p>
+			<p class="footnote">1. Pour <em>ⲙ̀ⲙⲟⲥ</em>.</p>
+			<p><em>ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁϥⲱϣ ⲉⲃⲟⲗ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙ ⲡϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓⲡⲛⲁ ⲉⲑⲟⲩⲁⲃ ⲧⲱⲛⲕ ⲛ̀ⲧⲉⲕⲟϩⲓ ⲉⲣⲁⲧⲕ.</em></p>
+			<p><em>ⲟⲩⲟϩ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁ ⲛⲉϥϩⲃⲱⲥ ϥⲟⲣϥⲉⲣ ⲉⲃⲟⲗ ⲙ̀ⲙⲟϥ ⲟⲩⲟϩ ⲁϥⲧⲱⲛϥ ⲁϥⲙⲟϣⲓ ⲉϥⲟⲛϧ ⲉⲣⲉ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲣⲑⲉⲱⲣⲓⲛ ⲙ̀ⲙⲟϥ.</em></p>
+			<p><em>ⲉⲧⲁϥⲛⲁⲩ ⲇⲉ ⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲁϥϩⲓⲧϥ ⲉϧⲣⲏⲓ ϧⲁⲣⲁⲧⲟⲩ ⲛ̀ⲛⲉϥϭⲁⲗⲁⲩϫ ⲁϥⲟⲩⲱϣⲧ ⲙ̀ⲙⲟϥ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲱⲟⲩⲛⲓⲁⲧⲕ ⲛ̀ⲑⲟⲕ ⲱ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲱⲟⲩⲛⲓⲁⲧⲥ ⲛ̀ϯⲛⲉϫⲓ ⲉⲧⲁⲥϥⲓⲧⲕ ⲛⲉⲙ ⲛⲓⲙ̀ⲛⲟϯ ⲉⲧⲁⲩϣⲁⲛⲟⲩϣⲕ ϫⲉ ⲁⲕⲥⲱϯ ⲛ̀ⲟⲩⲯⲩⲭⲏ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ ⲙ̀ⲫⲟⲟⲩ ⲉⲃⲟⲗϧⲉⲛ ⲁⲙⲉⲛϯ.</em></p>
+			<p><em>ϣⲉ ⲡⲉⲕⲟⲩϫⲁⲓ ⲱ ⲡⲁϭⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ϫⲉ ⲧⲁⲓⲅ̅ ⲛ̀ⲟⲩⲛⲟⲩ ⲉⲧⲁⲓⲁⲓⲧⲟⲩ ⲓⲥϫⲉⲛ ⲉⲧⲁⲓⲓ̀ ⲉⲃⲟⲗϧⲉⲛ ⲥⲱⲙⲁ ⲥⲉϩⲱⲟⲩ ⲛⲏⲓ ⲡⲁⲣⲁ ⲡⲁⲥⲏⲟⲩ ⲧⲏⲣϥ ⲉⲧⲁⲓⲁⲓϥ ϩⲓϫⲉⲛ ⲡⲕⲁϩⲓ ⲱ ⲡⲁϭⲥ.</em></p>
+			<p><em>ⲁⲛⲟⲕ ⲅⲁⲣ ⲁⲛⲟⲕ ⲟⲩⲣⲱⲙⲓ ⲉⲓϣⲉⲙϣⲓ ⲛ̀ⲛⲓⲓⲇⲱⲗⲟⲛ ⲉⲧⲁⲓⲓ̀ ⲇⲉ ⲉⲓⲛⲁⲙⲟⲩ ⲁⲩⲓ̀ ⲛ̀ⲥⲱⲓ ⲛ̀ϫⲉ ϩⲁⲛⲇⲏⲕⲁⲛⲟⲥ ⲉⲣⲉ ⲡⲟⲩϩⲟ ⲛⲉⲙ ⲡⲟⲩⲙⲟⲣⲫⲏ ϣⲉⲃⲓⲏⲟⲩⲧ ⲉ̀ⲛⲟⲩⲉⲣⲏⲟⲩ ϩⲁⲛⲟⲩⲟⲛ ⲛ̀ϩⲟ ⲛ̀ⲇⲣⲁⲕⲟⲛ ϩⲁⲛⲟⲩⲟⲛ ⲛ̀ϩⲟ ⲙ̀ⲙⲟⲩⲓ ϩⲁⲛⲟⲩⲟⲛ ⲛ̀ϩⲟ ⲛ̀ⲉⲙⲥⲁϩ ⲛⲉⲙ ϩⲟ ⲛ̀ⲗⲁⲃⲟⲓ.</em></p>
+			<p><em>ⲟⲩⲟϩ ⲁⲩⲫⲱⲣⲕ ⲛ̀ⲧⲁⲯⲩⲭⲏ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲁⲥⲱⲙⲁ ϧⲉⲛ ⲟⲩⲛⲓϣϯ ⲙ̀ⲙⲉⲧⲁⲑⲛⲁⲓ ⲁⲩϭⲟϫⲓ ⲛⲉⲙⲁⲥ ϩⲓϫⲉⲛ ⲟⲩⲛⲓϣϯ ⲛ̀ⲓⲁⲣⲟ ⲛ̀ⲭⲣⲱⲙ ⲁⲩⲟⲙⲥⲧ ⲉϧⲣⲏⲓ ⲉⲣⲟϥ ⲛⲁⲩ ⲩ̅ ⲙ̀ⲙⲁϩⲓ ⲟⲩⲟϩ ⲁⲩⲟⲗⲧ ⲁⲩⲧⲁϩⲟⲓ ⲉⲣⲁⲧ ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡⲓⲕⲣⲓⲧⲏⲥ ⲙ̀ⲙⲏⲓ ⲟⲩⲟϩ ⲁⲓⲥⲱⲧⲉⲙ ⲉ ⲟⲩⲁⲡⲟⲫⲁⲥⲓⲥ ⲉⲥⲛⲏⲟⲩ ⲉⲃⲟⲗ ϩⲓⲧⲟⲧϥ ϫⲉ ⲁⲗⲓⲟⲩⲓ ⲉⲃⲟⲗ ϩⲁⲣⲟⲓ ⲛ̀ⲧⲁⲓⲯⲩⲭⲏ ⲑⲁⲓ ⲉⲧⲁⲥⲉⲣ ⲛⲁⲓⲇⲉⲙⲱⲛ ⲛ̀ⲛⲟⲩϯ ⲛⲁⲥ ⲟⲩⲟϩ ⲁⲥϫⲱⲗ ⲉⲃⲟⲗ ⲙ̀ⲫϯ ⲉⲧⲁϥⲑⲁⲙⲓⲟⲥ ⲙⲁⲣⲉⲥⲉⲙⲓ ϯⲛⲟⲩ ϫⲉ ⲫϯ ϣⲟⲡ ϧⲉⲛ ⲛⲏ ⲉⲧϭⲟⲥⲓ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲇⲉ ⲁⲩϭⲟϫⲓ ⲛⲉⲙⲏⲓ ⲉ ⲟⲩⲙⲁⲛ̀ⲭⲁⲕⲓ ⲙ̀ⲙⲟⲛ ϩⲗⲓ ⲛ̀ⲟⲩⲱⲓⲛⲓ ⲛ̀ϧⲏⲧϥ ⲁⲩϩⲓⲧ ⲉϧⲣⲏⲓ ⲉ ⲡⲓϫⲁϥ ⲛⲉⲙ ⲡⲓⲥⲑⲉⲣⲧⲉⲣ ⲛ̀ⲧⲉ ⲛⲓⲛⲁϫϩⲓ.</em></p>
+			<p><em>ⲁⲓⲛⲁⲩ ⲉ ⲡⲓϥⲉⲛⲧ ⲛ̀ⲁⲧⲉⲛⲕⲟⲧ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ ⲉⲣⲉ ⲧⲉϥⲁⲫⲉ ⲟⲓ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲑⲁ ⲟⲩⲙ̀ⲥⲁϩ ⲉⲣⲉ ⲛⲓϭⲁⲧϥⲓ ⲧⲏⲣⲟⲩ ϧⲁⲧⲟⲧϥ ⲉⲩⲥⲓϯ ⲛ̀ⲛⲓⲯⲩⲭⲏ ϩⲓⲧϩⲏ ⲙ̀ⲙⲟϥ ⲁϥϣⲁⲛⲙⲁϩ ⲣⲱϥ ⲛ̀ϧⲏⲧⲟⲩ ϣⲁϥⲑⲣⲉ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲧⲏⲣⲟⲩ ⲟⲩⲱⲙ ϩⲱⲟⲩ ⲟⲩⲟϩ ⲛⲁⲩⲥⲱⲗⲡ ⲙ̀ⲙⲟⲛ ⲉⲃⲟⲗ ⲡⲉ ⲁⲗⲗⲁ ⲛⲁⲛⲙⲱⲟⲩⲧ ⲁⲛ ⲡⲉ.</em></p>
+			<p><em>ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲁⲩⲱⲗⲓ ⲙ̀ⲙⲟⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ ⲉⲑⲣⲟⲩⲟⲗⲧ ⲉ ⲁⲙⲉⲛϯ ϣⲁ ⲉⲛⲉϩ ⲉⲧⲓ ⲇⲉ ⲉⲩⲥⲱⲕ ⲙ̀ⲙⲟⲓ ⲁⲓⲥⲱⲧⲉⲙ ⲉⲟⲩⲥⲙⲏ ϩⲓⲫⲁϩⲟⲩ ⲙ̀ⲙⲟⲓ ⲉⲥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲙⲁⲧⲁⲥⲑⲟϥ ⲉⲫⲁϩⲟⲩ ⲙ̀ⲙⲟⲛ. ϩⲱϯ ⲉⲣⲟϥ ⲡⲉ ⲛ̀ⲧⲟⲩⲧⲁⲥⲑⲟϥ ⲉ ⲡⲓⲕⲟⲥⲙⲟⲥ ⲛ̀ⲕⲉⲥⲟⲡ ⲉⲑⲃⲉ ⲛⲓϣⲗⲏⲗ ⲛ̀ⲧⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲡⲓⲁⲛϯⲟⲭⲉⲟⲥ. ⲁⲩⲓⲛⲓ ⲛ̀ⲧⲁⲯⲩⲭⲏ ⲛ̀ⲕⲉⲥⲟⲡ ⲁⲩⲧⲏⲓⲥ ⲉϧⲟⲩⲛ ⲉ ⲡⲁⲥⲱⲙⲁ ϩⲏⲡⲡⲉ ⲓⲥ ⲫⲏ ⲉⲧⲁϥϣⲱⲡⲓ ⲙ̀ⲙⲟⲓ ϧⲉⲛ ⲁⲙⲉⲛϯ ⲁⲓⲧⲁⲙⲟⲕ ⲉⲣⲟϥ ⲱ ⲡⲁϭⲥ ⲛ̀ⲓⲱⲧ ⲗⲟⲓⲡⲟⲛ ϯϯϩⲟ ⲉⲣⲟϥ ⲙⲁⲣⲉ ⲡⲉⲕⲛⲁⲓ ⲧⲁϩⲟⲓ. ⲙⲟⲓ ⲛⲏⲓ ⲛ̀ϯⲥⲫⲣⲁⲅⲓⲥ ⲛ̀ⲧⲉ ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ϩⲓⲛⲁ ⲛ̀ⲥⲉϣⲧⲉⲙϩⲓⲧⲧ ⲉ ⲛⲓⲕⲟⲗⲁⲥⲓⲥ ⲉⲧⲉⲙⲙⲁⲩ ⲛ̀ⲕⲉⲥⲟⲡ.</em></p>
+			<p><em>ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲉⲧⲁ ⲡⲓⲙⲏϣ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲡϣⲁϯ ⲥⲱⲧⲉⲙ ⲉ ⲛⲁⲓⲥⲁϫⲓ ⲉⲣⲉ ⲫⲏ ⲉⲧⲁϥⲧⲱⲛϥ ϫⲱ ⲙ̀ⲙⲱⲟⲩ ⲁⲩⲱϣ ⲉⲃⲟⲗ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲛ̀ⲑⲟⲕ ⲟⲩⲛⲓϣϯ ⲫϯ ⲛ̀ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲡⲉⲛϭⲟⲓⲥ.</em></p>
+			<p><em>ⲡⲓⲁⲅⲓⲟⲥ ⲇⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲙ̀ⲡⲉϥⲉⲣⲁⲙⲉⲗⲉⲥ ⲉⲡⲧⲏⲣϥ ⲁⲗⲗⲁ ⲁϥⲭⲱⲗⲉⲙ ⲙ̀ⲙⲟϥ ⲁϥϯⲱⲙⲥ ⲛⲱⲟⲩ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙ ⲡϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ ⲟⲩⲟϩ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁⲩⲧⲁⲙⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲉ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲡⲓⲁⲛⲧⲓⲱⲭⲉⲟⲥ ⲁϥⲧⲟⲩⲛⲟⲥ ⲟⲩⲣⲉϥⲙⲱⲟⲩⲧ ⲟⲩⲟϩ ⲁ ⲫⲙⲏϣ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ϯⲡⲟⲗⲓⲥ ⲛⲁϩϯ ⲉⲣⲟϥ ⲟⲩⲟϩ ⲁϥϯⲱⲙⲥ ⲛⲱⲟⲩ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲡⲉϥⲛⲟⲩϯ ϧⲉⲛ ⲫⲓⲁⲣⲟ.</em></p>
+			<p><em>ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲙ̀ⲡⲉϥⲁⲣⲓⲑⲙⲟⲥ ⲙ̀ⲙⲁⲧⲟⲓ ⲉⲑⲣⲟⲩⲉⲛϥ ⲉϫⲉⲛ ⲡⲓⲃⲏⲙⲁ ⲉⲩϩⲓⲟⲩⲓ ⲉⲣⲟϥ ⲁϭⲛⲉ ϯⲁⲥⲟ. ⲡⲓⲙⲏϣ ⲧⲏⲣϥ. ⲟⲩⲛ ⲉⲧⲁⲩⲛⲁϩϯ ⲁⲩⲱϣ ⲉⲃⲟⲗ ϧⲉⲛ ⲟⲩϧⲣⲱⲟⲩ ⲛ̀ⲟⲩⲱⲧ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲁⲛⲟⲛ ϩⲁⲛⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲙ̀ⲡⲁⲣⲣⲏⲥⲓⲁ. ⲁϥϣⲑⲟⲣⲧⲉⲣ ⲛ̀ϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲁϥⲟⲩⲁϩⲥⲁϩⲛⲓ ⲛ̀ⲛⲓⲙⲁⲧⲟⲓ ⲉⲑⲣⲟⲩϧⲱⲧⲉⲃ ⲛ̀ⲥⲱⲟⲩ ⲛⲓⲕⲟⲩϫⲓ ⲛⲉⲙ ⲛⲓⲛⲓϣϯ ⲛⲓϧⲉⲗⲗⲟⲓ ⲛⲉⲙ ⲛⲓⲁⲗⲱⲟⲩⲓ ⲛⲉⲙ ⲛⲓⲕⲉϩⲓⲟⲙⲓ ⲛⲁⲣⲉ ⲧⲟⲩⲏⲡⲓ ⲓⲣⲓ ⲙ̀ⲩ̅ ⲛⲉⲙ ⲡⲓⲣⲉϥⲙⲱⲟⲩⲧ ⲉⲧⲁϥⲧⲟⲩⲛⲟⲥϥ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲏ ⲉⲑⲙⲱⲟⲩⲧ.</em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
+			<p><em></em></p>
 		</div>
 		<div id="vocabulaire_saidique">
 			<h2>Vocabulaire Saidique</h2>
