--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -16782,16 +16782,40 @@
 			<p><em>ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲉⲧⲁ ⲡⲓⲙⲏϣ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲡϣⲁϯ ⲥⲱⲧⲉⲙ ⲉ ⲛⲁⲓⲥⲁϫⲓ ⲉⲣⲉ ⲫⲏ ⲉⲧⲁϥⲧⲱⲛϥ ϫⲱ ⲙ̀ⲙⲱⲟⲩ ⲁⲩⲱϣ ⲉⲃⲟⲗ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲛ̀ⲑⲟⲕ ⲟⲩⲛⲓϣϯ ⲫϯ ⲛ̀ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲡⲉⲛϭⲟⲓⲥ.</em></p>
 			<p><em>ⲡⲓⲁⲅⲓⲟⲥ ⲇⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲙ̀ⲡⲉϥⲉⲣⲁⲙⲉⲗⲉⲥ ⲉⲡⲧⲏⲣϥ ⲁⲗⲗⲁ ⲁϥⲭⲱⲗⲉⲙ ⲙ̀ⲙⲟϥ ⲁϥϯⲱⲙⲥ ⲛⲱⲟⲩ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙ ⲡϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ ⲟⲩⲟϩ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁⲩⲧⲁⲙⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲉ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲡⲓⲁⲛⲧⲓⲱⲭⲉⲟⲥ ⲁϥⲧⲟⲩⲛⲟⲥ ⲟⲩⲣⲉϥⲙⲱⲟⲩⲧ ⲟⲩⲟϩ ⲁ ⲫⲙⲏϣ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ϯⲡⲟⲗⲓⲥ ⲛⲁϩϯ ⲉⲣⲟϥ ⲟⲩⲟϩ ⲁϥϯⲱⲙⲥ ⲛⲱⲟⲩ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲡⲉϥⲛⲟⲩϯ ϧⲉⲛ ⲫⲓⲁⲣⲟ.</em></p>
 			<p><em>ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲙ̀ⲡⲉϥⲁⲣⲓⲑⲙⲟⲥ ⲙ̀ⲙⲁⲧⲟⲓ ⲉⲑⲣⲟⲩⲉⲛϥ ⲉϫⲉⲛ ⲡⲓⲃⲏⲙⲁ ⲉⲩϩⲓⲟⲩⲓ ⲉⲣⲟϥ ⲁϭⲛⲉ ϯⲁⲥⲟ. ⲡⲓⲙⲏϣ ⲧⲏⲣϥ. ⲟⲩⲛ ⲉⲧⲁⲩⲛⲁϩϯ ⲁⲩⲱϣ ⲉⲃⲟⲗ ϧⲉⲛ ⲟⲩϧⲣⲱⲟⲩ ⲛ̀ⲟⲩⲱⲧ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲁⲛⲟⲛ ϩⲁⲛⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲙ̀ⲡⲁⲣⲣⲏⲥⲓⲁ. ⲁϥϣⲑⲟⲣⲧⲉⲣ ⲛ̀ϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲁϥⲟⲩⲁϩⲥⲁϩⲛⲓ ⲛ̀ⲛⲓⲙⲁⲧⲟⲓ ⲉⲑⲣⲟⲩϧⲱⲧⲉⲃ ⲛ̀ⲥⲱⲟⲩ ⲛⲓⲕⲟⲩϫⲓ ⲛⲉⲙ ⲛⲓⲛⲓϣϯ ⲛⲓϧⲉⲗⲗⲟⲓ ⲛⲉⲙ ⲛⲓⲁⲗⲱⲟⲩⲓ ⲛⲉⲙ ⲛⲓⲕⲉϩⲓⲟⲙⲓ ⲛⲁⲣⲉ ⲧⲟⲩⲏⲡⲓ ⲓⲣⲓ ⲙ̀ⲩ̅ ⲛⲉⲙ ⲡⲓⲣⲉϥⲙⲱⲟⲩⲧ ⲉⲧⲁϥⲧⲟⲩⲛⲟⲥϥ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲏ ⲉⲑⲙⲱⲟⲩⲧ.</em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
-			<p><em></em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲓⲥⲩⲛⲕⲁⲑⲉⲇⲣⲟⲥ ⲡⲉϫⲁϥ ⲙ̀ⲡⲓϩⲏⲅⲉⲙⲱⲛ ϫⲉ ⲙⲏ ⲉⲕⲛⲁϥⲱϯ ⲉⲃⲟⲗ ⲛ̀ϯⲡⲟⲗⲓⲥ ⲧⲏⲣⲥ ⲛⲉⲙ ⲡⲉⲥⲑⲟϣ ⲧⲏⲣϥ ⲙⲏ ⲕⲉ̀ⲙⲓ ⲁⲛ ϫⲉ ⲉⲧⲁϥⲉⲣⲙⲁⲅⲓⲁ ⲉⲣⲱⲟⲩ ⲛ̀ϫⲉ ⲡⲁⲓⲁⲛⲟⲥⲓⲟⲥ ⲛ̀ⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ϫⲉ ⲙⲁⲕⲁⲣⲓ ⲟⲩⲟϩ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁϥⲑⲣⲉ ⲛⲓⲙⲁⲧⲟⲓ ϩⲉⲣⲓ ⲉⲩϩⲓⲟⲩⲓ ⲉⲣⲱⲟⲩ.</em></p>
+			<p><em>ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲇⲉ ⲁϥⲕⲟⲧϥ ⲉⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲁ ⲡⲉⲕϩⲏⲧ ⲑⲱⲧ ⲉⲧⲁ ⲛⲁⲓ ⲧⲏⲣⲟⲩ ⲙⲟⲩ ⲉⲑⲃⲏⲧⲕ.</em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲡⲉϫⲁϥ ⲛⲁϥ ⲛ̀ⲑⲟⲕ ⲙⲉⲛ ⲁⲕϣⲁⲛⲟⲩⲱϣ ⲉ ϣⲉ ⲛⲁⲕ ϩⲁ ⲡⲉⲕⲟⲩⲣⲟ ⲛ̀ⲁⲛⲟⲙⲟⲥ ⲙⲏ ⲙ̀ⲡⲁⲕⲟⲩⲱⲣⲡ ⲛ̀ϩⲁⲛⲧⲁⲓⲟ ϧⲁϫⲱⲕ ⲡⲁⲓⲣⲏϯ ⲁⲛⲟⲕ ϩⲱ ⲉⲧⲁⲓⲟⲩⲱⲣⲡ ⲛ̀ⲛⲁⲓ ϧⲁϫⲱⲓ ⲉⲁⲓⲧⲏⲓⲧⲟⲩ ⲛ̀ⲧⲁⲓⲟ ⲙ̀ⲡⲁⲟⲩⲣⲟ ⲡⲁϭⲟⲓⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥.</em></p>
+			<p><em>ⲁϥϫⲱⲛⲧ ⲇⲉ ϧⲉⲛ ⲟⲩⲙ̀ⲃⲟⲛ ⲛ̀ϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛ̀ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ϫⲉ ϣⲉ ⲡⲓⲕⲣⲁⲧⲟⲥ ⲛ̀ⲧⲉ ⲛⲓⲟⲩⲣⲱⲟⲩ ⲛ̀ⲧⲉ ⲛⲓⲣⲱⲙⲉⲟⲥ ϫⲉ ϯⲛⲁⲉⲣⲃⲁⲥⲁⲛⲓⲍⲓⲛ ⲙ̀ⲙⲟⲕ ⲁⲛ ϣⲁϯϫⲓⲙⲓ ⲛ̀ⲟⲩⲙⲁⲅⲟⲥ ⲉϥⲟⲩⲟⲧ ⲉⲣⲟⲕ ϫⲉⲭⲁⲥ ⲛ̀ⲧⲉϥⲃⲱⲗ ⲉⲃⲟⲗ ⲛ̀ⲛⲉⲕⲙⲁⲅⲓⲁ.</em></p>
+			<p><em>ⲟⲩⲟϩ ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲛ̀ϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲉⲑⲣⲟⲩϩⲓⲧϥ ⲉⲡⲓϣⲧⲉⲕⲟ ⲙ̀ⲙⲏⲧ ⲛ̀ⲉϩⲟⲟⲩ ϣⲁⲧⲉϥⲥⲟϭⲛⲓ ϫⲉ ⲉϥⲛⲁⲉⲣ ⲟⲩ ⲛⲁϥ.</em></p>
+			<p><em>ⲡⲓⲁⲅⲓⲟⲥ ⲇⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲛⲁϥϩⲱⲟⲩⲓ ⲉϧⲟⲩⲛ ⲉ ⲡⲓϣⲧⲉⲕⲟ ⲡⲉ ⲟⲩⲟϩ ⲛⲁϥⲓⲣⲓ ⲡⲉ ⲛ̀ϩⲁⲛϣⲗⲏⲗ ⲛⲉⲙ ϩⲁⲛⲡⲣⲟⲥⲉⲩⲭⲏ ⲉⲩⲟϣ ⲙ̀ⲡⲓⲉϩⲟⲟⲩ ⲛⲉⲙ ⲡⲓⲉϫⲱⲣϩ ⲉⲩⲓⲛⲓ ⲛⲁϥ ⲛ̀ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧϣⲱⲛⲓ ϧⲉⲛ ϫⲓⲛϣⲱⲛⲓ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ⲛⲏ ⲉⲧⲉⲣⲉ ⲛⲓⲇⲉⲙⲱⲛ ⲛⲉⲙⲱⲟⲩ ⲟⲩⲟϩ ⲛⲁϥⲧⲁⲗϭⲟ ⲙ̀ⲙⲱⲟⲩ ⲧⲏⲣⲟⲩ ⲡⲉ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲡⲉⲛϭⲟⲓⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥.</em></p>
+			<p><em>ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲇⲉ ⲁϥⲟⲩⲱⲣⲡ ⲉⲃⲟⲗ ϧⲉⲛ ⲙⲁⲓ ⲛⲓⲃⲉⲛ ⲉϥϣⲓⲛⲓ ⲛ̀ⲥⲁ ⲟⲩⲙⲁⲅⲟⲥ ⲉ ⲟⲩⲟⲛ ϣϫⲟⲙ ⲙ̀ⲙⲟϥ ϧⲉⲛ ϩⲁⲛⲙⲁⲅⲓⲁ ⲁϥⲓ̀ ϩⲁⲣⲟϥ ⲛ̀ϫⲉ ⲟⲩⲁⲓ ⲉ ⲟⲩⲛⲓϣϯ ⲛ̀ⲥⲁϧ ⲙ̀ⲙⲁⲅⲟⲥ ⲡⲉ ⲉ ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲁⲗⲉⲝⲁⲛⲇⲣⲟⲥ ⲡⲉϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲛⲁϥ ϫⲉ ⲱ ⲁⲗⲉⲝⲁⲛⲇⲣⲟⲥ ⲁⲙⲟⲩ ⲛ̀ⲧⲉⲕⲃⲱⲗ ⲉⲃⲟⲗ ⲛ̀ⲛⲓⲙⲁⲅⲓⲁ ⲛ̀ⲧⲉ ⲡⲁⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ϫⲉ ⲟⲩⲏⲓ ⲙ̀ⲡⲓϣϫⲉⲙϫⲟⲙ ⲉⲣⲟϥ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲁⲗⲉⲝⲁⲛⲇⲣⲟⲥ ϫⲉ ⲁⲕⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲛⲏⲓ ⲱ ⲡⲁϭⲟⲓⲥ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲟⲩⲟϩ ⲡⲉϫⲉ ⲡⲓⲙⲁⲅⲟⲥ ⲙ̀ⲡⲓϩⲏⲅⲉⲙⲱⲛ ϫⲉ ⲙⲁⲣⲟⲩⲓⲛⲓ ⲛ̀ⲟⲩⲁϥ ⲛ̀ⲣⲓⲣ ⲛ̀ⲥⲉϧⲓϯ ⲙ̀ⲙⲱⲟⲩ ⲉ ⲡⲉϥⲥⲱⲙⲁ ⲟⲩⲟϩ ⲛ̀ⲥⲉⲫⲱⲛ ⲛ̀ⲟⲩⲥⲕⲉⲩⲟⲥ ⲙ̀ⲙⲏ ⲉϩⲣⲏⲓ ⲉϫⲉⲛ ⲧⲉϥⲁⲫⲉ ⲟⲩⲟϩ ϯⲛⲁϫⲉⲙϫⲟⲙ ⲉⲣⲟϥ.</em></p>
+			<p><em>ⲧⲟⲧⲉ ⲡⲓⲙⲁⲅⲟⲥ ⲁϥⲥⲓϯ ⲉⲃⲟⲗ ⲛ̀ⲛⲉϥϩⲃⲱⲥ ⲁϥϭⲓ ⲛⲁϥ ⲛ̀ⲟⲩⲁⲫⲟⲧ ⲁϥⲑⲁⲙⲓⲟ ⲛ̀ϩⲁⲛⲫⲁϧⲣⲓ ⲁϥϩⲓⲧⲟⲩ ⲉϧⲣⲏⲓ ⲉⲣⲟϥ ⲟⲩⲭⲗⲟ ⲛⲉⲙ ⲟⲩⲙⲁⲑⲟⲩⲓ ⲛ̀ϩⲟϥ ⲛⲉⲙ ⲟⲩϩⲩⲡⲁⲣ ⲛⲉⲙ ⲟⲩⲉⲛϣⲁϣⲓ ⲛⲉⲙ ⲟⲩϭⲟⲩ ⲛⲉⲙ ⲟⲩⲓⲁⲃⲓ ⲛ̀ⲧⲉ ⲟⲩⲣⲉϥⲙⲱⲟⲩⲧ ⲟⲩⲟϩ ⲁϥⲉⲣⲉⲡⲓⲕⲁⲗⲓⲥⲑⲉ ⲛ̀ϩⲁⲛⲣⲁⲛ ⲛ̀ⲧⲉ ⲡϭⲓⲥⲓ ⲉϩⲣⲏⲓ ⲉϫⲱϥ ϩⲱⲥⲧⲉ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ⲕⲓⲙ ⲟⲩⲟϩ ⲛ̀ⲧⲉϥⲥⲑⲉⲣⲧⲉⲣ ϩⲓⲧⲉⲛ ⲛⲓⲣⲁⲛ ⲛ̀ⲧⲉ ϯⲧⲉⲭⲛⲏ ⲙ̀ⲙⲉⲧⲁⲭⲱ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓⲙⲁⲅⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ϫⲉ ϭⲓ ⲛⲁⲕ ⲙ̀ⲡⲁⲓⲁⲫⲟⲧ ⲉⲃⲟⲗϧⲉⲛ ⲛⲁϫⲓϫ ⲛ̀ⲧⲉⲕϫⲉⲙϯⲡⲓ ⲙ̀ⲙⲟϥ ⲛ̀ⲧⲁⲛⲁⲩ ⲉⲣⲟⲕ ⲉϣⲱⲡ ⲉⲕⲛⲁϩϯ ⲉⲫϯ ⲛ̀ⲧⲉ ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲙⲁⲣⲉϥⲉⲣⲃⲟⲏⲑⲓⲛ ⲉⲣⲟⲕ ⲛ̀ⲧⲉϥⲛⲁϩⲙⲉⲕ.</em></p>
+			<p><em>ⲡⲓⲁⲅⲓⲟⲥ ⲇⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲙ̀ⲡⲉϥⲟⲩⲱϣ ⲉ̀ⲥⲟϥ ⲁⲗⲗⲁ ⲁϥϥⲁⲓ ⲛ̀ⲛⲉϥⲃⲁⲗ ⲉⲡϣⲱⲓ ⲉ ⲧⲫⲉ ⲟⲩⲟϩ ⲁϥⲛⲁⲩ ⲉ ⲡϣⲏⲣⲓ ⲙ̀ⲫϯ ⲉⲣⲉ ⲛⲉϥⲁⲅⲅⲉⲗⲟⲥ ⲑⲟⲩⲏⲧ ⲉⲣⲟϥ ⲉⲣⲉ ⲟⲩⲟⲛ ⲟⲩⲭⲗⲟⲙ ϧⲉⲛ ⲛⲉϥϫⲓϫ.</em></p>
+			<p><em>ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ϫⲉ ϭⲣⲟ ⲱ ⲫⲏ ⲉⲧⲁϥϭⲣⲟ ⲟⲩⲟϩ ϫⲉⲙϫⲟⲙ ⲱ ⲫⲏ ⲉⲧⲁϥϫⲉⲙϫⲟⲙ ⲙ̀ⲡⲉⲣⲉⲣϩⲟϯ ϧⲁϫⲱϥ ⲙ̀ⲡⲁⲓⲁⲫⲟⲧ ⲙ̀ⲙⲁⲑⲟⲩⲓ ⲁⲛⲟⲕ ϩⲱ ⲁⲏϯ ⲛⲏⲓ ⲛ̀ⲟⲩⲉⲛϣⲁϣⲓ ⲁⲓⲉⲣϣⲟⲣⲡ ⲛ̀ϫⲉⲙϯⲡⲓ ⲙⲙⲟϥ ⲉϫⲉⲛ ⲑⲏⲛⲟⲩ ⲛ̀ⲑⲟⲕ ϩⲱⲕ ⲡⲁⲙⲉⲛⲣⲓⲧ ⲁⲕⲧⲉⲛⲑⲱⲛⲕ ⲉⲣⲟⲓ ⲙ̀ⲙⲟⲛ ϩⲗⲓ ⲙ̀ⲡⲉⲧϩⲱⲟⲩ ⲛⲁϣϫⲉⲙϫⲟⲙ ⲉⲣⲟⲕ ⲁⲛ.</em></p>
+			<p><em>ⲉⲧⲁϥⲥⲱⲧⲉⲙ ⲇⲉ ⲉ ⲛⲁⲓⲥⲁϫⲓ ⲛ̀ⲧⲟⲧϥ ⲙ̀ⲡⲓⲥⲱⲧⲏⲣ ⲛ̀ⲁⲅⲁⲑⲟⲥ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲁϥϭⲓ ⲙ̀ⲡⲓⲁⲫⲟⲧ ⲛ̀ⲧⲟⲧϥ ⲙ̀ⲡⲓⲙⲁⲅⲟⲥ ⲁϥⲉⲣⲥⲫⲣⲁⲅⲓⲍⲓⲛ ⲙ̀ⲙⲟϥ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙ ⲡϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ ⲟⲩⲟϩ ⲁϥⲥⲱ ⲉⲃⲟⲗ ⲛ̀ϧⲏⲧϥ ⲉϥϩⲟⲗϫ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲉⲃⲓⲱ ⲛⲉⲙ ⲟⲩⲛⲏⲛⲓ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓⲙⲁⲅⲟⲥ ⲛⲁϥ ϫⲉ ⲉϥⲟⲓ ⲛ̀ⲁϣⲛ̀ⲣⲏϯ ⲙⲏ ϥⲛⲟⲧⲉⲙ ϧⲉⲛ ⲣⲱⲕ ⲡⲉϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲛⲁϥ ϫⲉ ⲁⲙⲟⲩ ⲟⲩⲟϩ ⲁⲛⲁⲩ.</em></p>
+			<p><em>ⲉⲧⲁϥϭⲓⲧϥ ⲇⲉ ϧⲉⲛ ⲛⲉϥϫⲓϫ ⲉϥⲟⲩⲱϣ ⲉⲥⲱ ϩⲱϥ ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲡⲉϥⲛⲟⲩϯ ⲟⲩⲟϩ ⲁϥⲫⲱϫⲓ ⲥⲁⲧⲟⲧϥ ⲁϥⲉⲣⲧⲟⲓ ⲥⲛⲟⲩϯ ϧⲉⲛ ⲑⲙⲏϯ ⲙ̀ⲡⲓⲙⲏϣ ⲧⲏⲣϥ.</em></p>
+			<p><em>ⲉⲧⲁⲩⲛⲁⲩ ⲇⲉ ⲧⲏⲣⲟⲩ ⲛ̀ϫⲉ ⲛⲓⲙⲏϣ ⲁⲩⲱϣ ⲉⲃⲟⲗ ϧⲉⲛ ⲑⲙⲏϯ ⲙ̀ⲡⲓⲑⲉⲁⲧⲣⲟⲛ ϫⲉ ⲙ̀ⲙⲟⲛ ⲛⲟⲩϯ ⲉⲃⲏⲗ ⲉ ⲫϯ ⲛ̀ⲧⲉ ⲧⲫⲉ ⲫϯ ⲛ̀ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲫϯ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲡⲓⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲫⲏ ⲉⲧⲓⲣⲓ ⲛ̀ϩⲁⲛⲙⲏⲓⲛⲓ ⲛⲉⲙ ϩⲁⲛϣⲫⲏⲣⲓ ⲙ̀ⲡⲉⲙⲑⲟ ⲛ̀ⲛⲓⲟⲩⲣⲱⲟⲩ ⲛⲉⲙ ⲡⲟⲩⲥⲧⲣⲁⲧⲉⲩⲙⲁ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ϫⲉ ⲥⲱⲧⲉⲙ ⲛ̀ⲥⲱⲓ ⲛ̀ⲧⲉⲕⲉⲣⲥⲁⲃⲉ ⲛ̀ⲧⲉⲕⲉⲣⲑⲩⲥⲓⲁ ⲡⲉϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲛⲁϥ ϫⲉ ⲁⲛⲟⲕ ⲟⲩⲥⲁⲃⲉ ⲓⲥϫⲉⲛ ⲉⲓⲟⲓ ⲛ̀ⲕⲟⲩϫⲓ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲛⲁϥ ϫⲉ ⲁⲗⲗⲁ ϯⲛⲟⲩ ⲁⲕⲉⲣⲥⲟϫ ⲡⲉϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲛⲁϥ ϫⲉ ⲛⲓⲥⲟϫ ⲛ̀ⲧⲉ ⲡⲓⲕⲟⲥⲙⲟⲥ ⲁϥⲥⲟⲧⲡⲟⲩ ⲛ̀ϫⲉ ⲫϯ ϩⲓⲛⲁ ⲛ̀ⲧⲟⲩϯϣⲓⲡⲓ ⲛ̀ⲛⲓⲥⲁⲃⲉⲩ ⲛ̀ⲛⲟⲩϫ ⲙ̀ⲡⲉⲕⲣⲏϯ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓⲕⲟⲙⲏⲥ ⲛⲁϥ ϫⲉ ⲉⲣⲉ ⲫⲁⲓ ⲥϧⲏⲟⲩⲧ ⲛ̀ⲑⲱⲛ ⲡⲉϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲛⲁϥ ϫⲉ ⲡⲁⲩⲗⲟⲥ ⲡⲓⲁⲡⲟⲥⲧⲟⲗⲟⲥ ⲡⲉⲧⲁϥϫⲟⲥ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲛⲁϥ ϫⲉ ⲟⲩⲛⲟⲩϯ ϩⲱϥ ⲡⲉ ⲡⲁⲩⲗⲟⲥ ⲡⲉϫⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲛⲁϥ ϫⲉ ⲙ̀ⲙⲟⲛ ⲁⲗⲗⲁ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲥⲁⲃⲉ ⲛ̀ⲁⲣⲭⲏⲧⲉⲕⲧⲱⲛ ⲉⲁϥⲭⲱ ⲛ̀ⲟⲩⲥⲉⲛϯ ⲉϧⲣⲏⲓ ⲟⲩⲟϩ ⲛ̀ⲧⲉϥⲓ̀ ⲛ̀ϫⲉ ⲕⲉⲟⲩⲁⲓ ⲛ̀ⲧⲉϥϫⲟⲕⲥ ⲉⲃⲟⲗ ⲟⲩⲟϩ ⲟⲩⲡⲁⲓⲣⲏϯ ϩⲱϥ ⲡⲉ ⲡⲁⲩⲗⲟⲥ ⲉⲧⲁϥⲓ̀ ⲛ̀ϫⲉ ⲡⲁⲩⲗⲟⲥ ⲉⲡϧⲁⲉ ⲙ̀ⲡⲉⲛϭⲟⲓⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲁϥϫⲱⲕ ⲉⲃⲟⲗ ⲛ̀ϯⲅⲣⲁⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲧⲏⲣⲥ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲡⲓⲕⲟⲙⲏⲥ ⲛⲁϥ ϫⲉ ⲕⲏⲛ ⲉⲣⲟⲕ ⲉⲕⲓⲣⲓ ⲛ̀ⲛⲁⲓⲙⲉⲧⲥⲟϫ ⲥⲉⲛⲁϯϩⲏⲟⲩ ⲛⲁⲕ ⲁⲛ ⲛ̀ϩⲗⲓ ⲥⲱⲧⲉⲙ ϫⲉ ⲟⲩⲛ ⲛ̀ⲥⲱⲓ ⲁⲣⲓⲑⲩⲥⲓⲁ ⲡⲉϫⲉ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲛⲁϥ ϫⲉ ⲁⲛⲟⲕ ⲟⲩⲥⲟϫ ⲛ̀ⲁⲧϩⲏⲧ ⲁⲓϣⲁⲛⲥⲱⲧⲉⲙ ⲛ̀ⲥⲱⲕ ⲛ̀ⲧⲁⲉⲣⲑⲩⲥⲓⲁ ϫⲉⲟⲩⲏⲓ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲑⲛⲁⲥⲱⲧⲉⲙ ⲛ̀ⲥⲱⲕ ϩⲁⲛⲥⲟϫ ⲛ̀ⲁⲧϩⲏⲧ ⲛⲉ ⲙ̀ⲡⲟⲩⲙⲟϣⲓ ϧⲉⲛ ⲑⲙⲏⲓ ⲉⲛⲉϩ ⲁⲗⲗⲁ ⲉⲣⲉ ⲡⲟⲩϩⲏⲧ ⲑⲏⲙ ⲉⲣⲱⲟⲩ.</em></p>
+			<p><em>ⲧⲟⲧⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ϧⲉⲛ ⲟⲩϫⲱⲛⲧ ⲛⲉⲙ ⲟⲩⲙ̀ⲃⲟⲛ ⲁϥⲑⲣⲟⲩⲓⲛⲓ ⲉⲃⲟⲗ ⲛ̀ⲛⲉϥⲙⲟⲩⲧ ⲓⲥϫⲉⲛ ⲧⲉϥⲁⲫⲉ ϣⲁ ⲛⲉϥⲫⲁⲧ.</em></p>
+			<p><em>ⲡⲉϫⲉ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲛⲁϥ ϫⲉ ⲛⲁⲓⲙⲟⲩⲧ ⲉⲧⲁⲕⲉⲛⲟⲩ ⲉⲃⲟⲗϧⲉⲛ ⲡⲁⲥⲱⲙⲁ ⲛ̀ϯϩⲏϣ ϧⲁⲣⲱⲟⲩ ⲁⲛ ⲁⲗⲗⲁ ⲉⲓⲟⲓ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲁⲓ ⲉⲧⲁϥⲟⲩⲉⲙ ⲟⲩϣⲉ ⲛ̀ⲥⲉⲣⲃⲉⲛⲓ ⲟⲩⲟϩ ⲁⲩϣⲁⲛⲉⲛⲥ ⲉⲃⲟⲗϧⲉⲛ ⲧⲉϥⲫⲁⲧ ϣⲁⲣⲉ ⲟⲩⲙ̀ⲧⲟⲛ ϣⲱⲡⲓ ⲙ̀ⲡⲓⲥⲱⲙⲁ ⲧⲏⲣϥ ⲡⲁⲓⲣⲏϯ ⲁⲛⲟⲕ ϩⲱ ⲡⲉⲧϣⲟⲡ ⲙ̀ⲙⲟⲓ ϯⲛⲟⲩ ⲁⲗⲗⲁ ϯϣⲉⲡϩⲙⲟⲧ ⲛ̀ⲧⲟⲧϥ ⲙ̀ⲡⲁϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲫⲏ ⲉⲧⲁϥϯⲛⲟⲙϯ ⲛⲏⲓ.</em></p>
+			<p><em>ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲇⲉ ⲛ̀ϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲉⲑⲣⲟⲩⲥⲁϩϯ ϧⲁ ⲟⲩⲛⲉϩ ϣⲁⲧⲉϥⲃⲉⲣⲃⲉⲣ ⲛ̀ⲥⲉⲫⲟⲛϥ ⲉϫⲉⲛ ⲧⲉϥⲁⲫⲉ ⲛⲉⲙ ⲉϫⲉⲛ ⲛⲉϥϣⲁϣ ⲟⲩⲟϩ ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲛ̀ϫⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ϩⲓⲛⲁ ⲛ̀ⲥⲉⲁϣϥ ⲛ̀ⲥⲉϩⲱⲕⲓ ⲙ̀ⲙⲟϥ ⲛ̀ⲟⲩⲛⲟⲩ ⲃ̅ϯ ⲁⲩⲭⲱ ⲛ̀ϩⲁⲛⲗⲁⲙⲡⲁⲥ ⲛ̀ⲭⲣⲱⲙ ϧⲁⲣⲟϥ ⲟⲩⲟϩ ⲙ̀ⲡⲉ ⲡⲓⲭⲣⲱⲙ ϭⲟϩ ⲉⲣⲟϥ ⲉⲡⲧⲏⲣϥ ⲁⲗⲗⲁ ⲛⲁⲣⲉ ⲫϯ ϯϫⲟⲙ ⲛⲁϥ ⲡⲉ ⲟⲩⲟϩ ⲉϥⲉⲣϩⲉⲙⲓ ⲙ̀ⲙⲟⲛ ϧⲉⲛ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧⲉϥⲓⲣⲓ ⲙ̀ⲙⲱⲟⲩ.</em></p>
+			<p><em>ⲟⲩⲟϩ ⲁϥⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲛ̀ϫⲉ ⲡⲓⲁⲛⲟⲙⲟⲥ ⲛ̀ⲥⲉϩⲓⲧϥ ⲉⲡⲓϣⲧⲉⲕⲟ ⲟⲩⲟϩ ⲛ̀ⲥⲉϣⲧⲉⲙϯⲱⲓⲕ ⲛⲁϥ ⲟⲩⲇⲉ ⲙⲱⲟⲩ ⲡⲓⲅⲉⲛⲛⲉⲟⲥ ⲇⲉ ⲛⲁϥⲭⲏ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ ⲙ̀ⲓ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲛ̀ⲁⲑⲟⲩⲱⲙ ⲟⲩⲟϩ ⲛ̀ⲁⲧⲥⲱ ⲉϥⲭⲏ ϧⲉⲛ ϩⲁⲛⲛⲓϣϯ ⲙ̀ⲃⲁⲥⲁⲛⲟⲥ.</em></p>
+			<p><em>ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲧⲏⲣⲟⲩ ⲁϥⲓ̀ ⲉϧⲟⲩⲛ ⲉ ⲣⲁⲕⲟϯ ⲛ̀ϫⲉ ⲟⲩⲥⲕⲣⲓⲃⲱⲛ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲇⲓⲟⲕⲗⲏⲧⲓⲁⲛⲟⲥ ⲛⲉⲙ ϩⲁⲛⲥϧⲁⲓ.</em></p>
+			<p><em>ⲁⲩⲓ̀ ⲇⲉ ϩⲁⲣⲟϥ ⲛ̀ϫⲉ ⲛⲓⲁⲣⲭⲱⲛ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ ⲧⲏⲣⲟⲩ ⲁⲩϯⲱⲟⲩ ⲛⲁϥ ⲟⲩⲟϩ ⲁϥⲱϣ ⲉⲣⲱⲟⲩ ⲛ̀ⲛⲓⲥϧⲁⲓ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲁϥⲓ̀ ⲇⲉ ϩⲱϥ ⲉϧⲏⲧ ⲛ̀ϫⲉ ⲁⲣⲓⲁⲛⲟⲥ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲛ̀ⲧⲉ ⲑⲉⲃⲁⲓⲥ ⲁϥⲓ̀ ⲉϧⲟⲩⲛ ⲉ ⲣⲁⲕⲟϯ ϣⲁ ⲡⲓϥⲁⲓϣⲓⲛⲓ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲁϥⲉⲣⲡⲣⲟⲥⲕⲩⲛⲓⲛ ⲙ̀ⲙⲟϥ ⲟⲩⲟϩ ⲁⲩϩⲉⲙⲥⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩⲉⲣⲁⲣⲓⲥⲧⲟⲛ ⲛ̀ⲕ̅ ⲛ̀ⲉϩⲟⲟⲩ.</em></p>
+			<p><em>ⲙⲉⲛⲉⲛⲥⲱⲥ ⲇⲉ ⲁϥϣⲉ ⲛⲁϥ ⲛ̀ϫⲉ ⲡⲓϥⲁⲓϣⲓⲛⲓ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲟⲩⲟϩ ⲁ ⲛⲁⲭⲏⲙⲓ ϩⲱⲟⲩ ϣⲉ ⲛⲱⲟⲩ ⲡⲓⲟⲩⲁⲓ ⲡⲓⲟⲩⲁⲓ ⲉⲧⲉϥⲃⲁⲕⲓ ⲁϥⲓ̀ ⲇⲉ ϩⲱϥ ⲉⲣⲏⲥ ϧⲉⲛ ⲭⲏⲙⲓ ⲛ̀ϫⲉ ⲁⲣⲓⲁⲛⲟⲥ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲛ̀ⲧⲉ ⲑⲏⲃⲁⲓⲥ ⲉⲧⲁϥⲫⲟϩ ⲉ ⲡϣⲁϯ ⲁ ⲡⲓⲑⲏⲟⲩ ⲭⲁϥ ⲉⲃⲟⲗ ⲁϥⲁⲙⲟⲛⲓ ⲉϧⲟⲩⲛ.</em></p>
+			<p><em>ⲉⲧⲁⲩⲧⲁⲙⲉ ⲉⲩⲧⲩⲭⲓⲁⲛⲟⲥ ⲇⲉ ⲉⲑⲃⲏⲧϥ ⲡⲓⲕⲟⲙⲏⲥ ⲛ̀ⲧⲉ ⲡϣⲁϯ ϫⲉ ⲁⲣⲓⲁⲛⲟⲥ ⲙⲟⲛⲓ ⲉϧⲟⲩⲛ ⲉ ϯⲃⲁⲕⲓ ⲁϥⲧⲱⲛϥ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁϥⲓ̀ ⲉⲃⲟⲗ ⲉϩⲣⲁϥ ⲛⲉⲙ ⲡⲉϥⲙⲏϣ ⲧⲏⲣϥ ⲁϥϭⲓⲧϥ ⲉϧⲟⲩⲛ ⲉ ⲡⲉϥⲏⲓ ⲁⲩⲉⲣⲁⲣⲓⲥⲧⲟⲛ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲛ̀ⲅ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲙⲉⲛⲉⲛⲥⲁ ⲡⲓⲅ̅ ⲇⲉ ⲛ̀ⲉϩⲟⲟⲩ ⲁϥⲉⲣⲫⲙⲉⲩⲓ ⲙⲱⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲛ̀ϫⲉ ⲉⲩϯⲩⲭⲓⲁⲛⲟⲥ ⲡⲓⲕⲟⲙⲏⲥ.</em></p>
+			<p><em>ⲁϥⲧⲁⲙⲉ ⲁⲣⲓⲁⲛⲟⲥ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ϥϣⲟⲡ ϧⲉⲛ ⲧⲉⲛⲡⲟⲗⲓⲥ ⲛ̀ϫⲉ ⲟⲩⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲉ ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲙⲁⲕⲁⲣⲓ ⲡⲓⲁⲛⲧⲓⲟⲭⲉⲟⲥ ⲫⲁⲓ ⲉⲧⲁϥⲉⲣⲉⲝⲱⲣⲓⲍⲓⲛ ⲙ̀ⲙⲟϥ ⲉⲧⲟⲧ ⲛ̀ϫⲉ ⲁⲣⲙⲉⲛⲓⲟⲥ ⲡⲓⲇⲟⲩⲝ ⲛ̀ⲧⲉ ⲣⲁⲕⲟϯ ⲫⲁⲓ ⲇⲉ ⲁⲩϯ ⲛⲏⲓ ⲛ̀ⲧⲉϥⲁⲛⲁⲫⲟⲣⲁ ⲫⲁⲓ ⲇⲉ ⲁϥⲓⲣⲓ ⲛ̀ϩⲁⲛⲛⲓϣϯ ⲙ̀ⲙⲉⲧⲁⲭⲱ ⲙ̀ⲡⲁⲙ̀ⲑⲟ ⲉⲃⲟⲗ ϩⲱⲥⲧⲉ ⲛ̀ⲧⲉϥⲧⲟⲩⲛⲟⲥ ⲛⲓⲣⲉϥⲙⲱⲟⲩⲧ ⲟⲩⲟϩ ⲁ ϯⲡⲟⲗⲓⲥ ⲧⲏⲣⲥ ⲛⲁϩϯ ⲉⲣⲟϥ ⲛⲉⲙ ⲡⲉϥⲛⲟⲩϯ ⲁⲓϧⲟⲑⲃⲟⲩ ⲧⲏⲣⲟⲩ ⲡⲓⲕⲉⲛⲓϣϯ ⲇⲉ ⲙ̀ⲙⲁⲅⲟⲥ ⲁⲗⲉⲝⲁⲛⲇⲣⲟⲥ ⲁϥϯ ⲛⲁϥ ⲛ̀ⲟⲩⲁⲫⲟⲧ ⲁϥⲥⲟϥ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲁϥϯ ⲙ̀ⲡⲉϥⲡ︤ⲛ︦ⲁ︥ ⲗⲟⲓⲡⲟⲛ ϫⲉ ⲟⲩ ⲡⲉ ⲉⲧⲉⲕⲟⲩⲁϣϥ ⲉⲑⲣⲉⲛⲁⲓϥ ⲛⲁϥ ⲱ ⲁⲣⲓⲁⲛⲉ ϫⲉ ⲟⲩⲏⲓ ⲁⲛⲟⲕ ⲡⲉ ⲉⲧⲁϥⲥⲣⲱϥⲧ ⲉⲣⲟⲓ ϫⲉ.</em></p>
+			<p><em>ⲁⲣⲓⲁⲛⲟⲥ ⲇⲉ ⲁϥⲟⲩⲁϩⲥⲁϩⲛⲓ ⲉⲑⲣⲟⲩⲉⲛϥ ϩⲓⲧϩⲏ ⲙ̀ⲙⲟϥ ⲟⲩⲟϩ ⲉⲧⲁϥⲛⲁⲩ ⲉⲣⲟϥ ⲛ̀ϫⲉ ⲁⲣⲓⲁⲛⲟⲥ ⲁϥⲉⲣϣⲫⲏⲣⲓ ⲛ̀ⲧⲉϥⲛⲓϣϯ ⲙ̀ⲙⲉⲧⲥⲁⲓⲉ ⲛⲉⲙ ⲡⲓϩⲙⲟⲧ ⲛ̀ⲧⲉ ⲫϯ ⲉⲧⲭⲏ ϧⲉⲛ ⲡⲉϥϩⲟ ⲉ ⲛⲉ ⲡⲉϥⲙⲁϩⲕ̅ⲁ̅ ⲅⲁⲣ ⲛ̀ⲉϩⲟⲟⲩ ⲡⲉ ⲉϥⲟⲓ ⲛ̀ⲁⲧⲟⲩⲱⲙ ⲟⲩⲟϩ ⲛ̀ⲁⲧⲥⲱ.</em></p>
+			<p><em>ⲉⲧⲁϥⲛⲟⲩⲓ ⲇⲉ ⲉ ⲙⲟϣⲓ ⲛ̀ϫⲉ ⲁⲣⲓⲁⲛⲟⲥ ⲉ ϩⲱⲗ ⲉⲣⲏⲥ ⲟⲩⲟϩ ⲁ ⲉⲩⲧⲩⲭⲓⲁⲛⲟⲥ ⲉⲣⲉⲧⲓⲛ ⲛ̀ⲁⲣⲓⲁⲛⲟⲥ ⲉⲑⲣⲉϥⲱⲗⲓ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓ ⲉⲣⲏⲥ ⲛⲉⲙⲁϥ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲓⲉ ⲛ̀ⲧⲉϥⲉⲣⲑⲩⲥⲓⲁ ⲓⲉ ⲛ̀ⲧⲉⲕϧⲱⲧⲉⲃ ⲙ̀ⲙⲟϥ ⲕⲁⲧⲁ ϯⲕⲉⲗⲉⲩⲥⲓⲥ ⲛ̀ⲧⲉ ⲇⲓⲟⲕⲗⲏⲧⲓⲁⲛⲟⲥ.</em></p>
+			<p>II</p>
+			<p><em>Ⲁⲣⲓⲁⲛⲟⲥ ⲇⲉ ⲡⲓϩⲏⲅⲉⲙⲱⲛ ⲉϥⲛⲁⲧⲁⲗⲟϥ ⲉ ⲡⲓϫⲟⲓ ⲉⲑⲣⲉϥⲉⲣϩⲱⲧ ⲉⲣⲏⲥ ⲁⲩⲱϣϯ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲉⲃⲟⲗ ⲛ̀ϫⲉ ⲛⲓⲙⲁⲧⲟⲓ ⲉⲑⲣⲟⲩⲟⲗϥ ⲉⲃⲟⲗ ⲉ ⲡⲓϫⲟⲓ.</em></p>
 			<p><em></em></p>
 			<p><em></em></p>
 		</div>
