--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -16853,9 +16853,9 @@
 				<p><em>ⲁⲛⲟⲕ ⲡⲉ ⲓⲟⲩⲗⲓⲟⲥ ⲡⲓⲣⲉⲙⲭⲃⲉϩⲥ ⲁⲓⲥϧⲁⲓ ⲛ̀ⲛⲁⲓϩⲩⲡⲟⲙⲛⲏⲙⲁ ⲛ̀ⲧⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲡⲓⲁⲛⲧⲓⲱⲭⲉⲟⲥ ⲟⲩⲟϩ ⲛⲁⲓⲧⲁⲗⲏⲟⲩⲧ ⲡⲓϫⲟⲓ ⲛⲉⲙ ⲁⲣⲓⲁⲛⲟⲥ ⲡⲉ ⲉⲑⲃⲉ ⲛⲁⲓϩⲃⲏⲟⲩⲓ ⲙ̀ⲡⲁⲓⲣⲏϯ.</em></p>
 				<p><em>ϥⲥⲱⲟⲩⲛ ⲛ̀ϫⲉ ⲡⲁϭⲟⲓⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ϫⲉ ⲙ̀ⲡⲓⲱⲗⲓ ⲉⲃⲟⲗ ⲛ̀ϧⲏⲧⲟⲩ ⲟⲩⲇⲉ ⲟⲛ ⲙ̀ⲡⲓⲧⲟⲩϩⲟ ⲉⲣⲱⲟⲩ ⲁⲗⲗⲁ ⲫⲁⲓ ⲡⲉ ⲡⲓⲣⲏϯ ⲉⲧⲁϥϫⲱⲕ ⲉⲃⲟⲗ ⲛ̀ⲧⲉϥⲙⲁⲣⲧⲩⲣⲓⲁ ⲉⲑⲟⲩⲁⲃ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲁⲡⲁ ⲙⲁⲕⲁⲣⲓⲟⲥ ⲡⲓⲁⲛⲧⲓⲱⲭⲉⲟⲥ ⲉⲩⲱⲟⲩ ⲙ̀ⲡⲉⲛϭⲟⲓⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲫⲁⲓ ⲉⲧⲉ ⲉⲃⲟⲗ ϩⲓⲧⲟⲧϥ ⲉⲣⲉ ⲱⲟⲩ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ⲧⲁⲓⲟ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ⲡⲣⲟⲥⲕⲩⲛⲏⲥⲓⲥ ⲛⲓⲃⲉⲛ ⲉⲣⲡⲣⲉⲡⲓ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙⲁϥ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ ⲛ̀ⲣⲉϥⲧⲁⲛϧⲟ ⲟⲩⲟϩ ⲛ̀ⲟⲙⲟⲟⲩⲥⲓⲟⲥ ⲛⲉⲙⲁϥ ϯⲛⲟⲩ ⲛⲉⲙ ⲛ̀ⲥⲏⲟⲩ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ϣⲁ ⲉⲛⲉϩ ⲛ̀ⲧⲉ ⲛⲓⲉⲛⲉϩ ⲧⲏⲣⲟⲩ ⲁⲙⲏⲛ.</em></p>
 				<p>III</p>
-				<p><em></em></p>
-				<p><em></em></p>
-				<p><em></em></p>
+				<p><em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲁ ⲫϯ ϣⲁⲣⲓ ⲉ ⲇⲓⲟⲕⲗⲏⲧⲓⲁⲛⲟⲥ ϧⲉⲛ ⲟⲩⲙⲉⲧⲃⲉⲗⲗⲉ ⲟⲩⲟϩ ⲁ ⲛⲓⲥⲩⲛⲕⲗⲏⲧⲓⲕⲟⲥ ⲛⲉⲙ ⲛⲓⲥⲧⲣⲁⲧⲏⲗⲁⲧⲏⲥ ⲛⲉⲙ ⲛⲓⲛⲓϣϯ ⲛ̀ⲧⲉ ϯⲙⲉⲧⲟⲩⲣⲟ ⲧⲏⲣⲟⲩ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲉϫⲱϥ ⲁⲩϩⲓⲧϥ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲙⲉⲧⲟⲩⲣⲟ ⲟⲩⲟϩ ⲁⲩⲉⲛ ⲛⲟⲩϫⲓϫ ⲉϫⲉⲛ ⲟⲩ ϧⲉⲗϣⲓⲣⲓ ⲛ̀ⲥⲁⲓⲉ ⲉ ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲥ ⲛⲉ ⲟⲩⲥⲧⲣⲁⲧⲏⲗⲁⲧⲏⲥ ⲡⲉ ⲟⲩⲟϩ ⲁⲩⲁⲓϥ ⲛ̀ⲟⲩⲣⲟ ⲁⲩⲧϩⲉⲙⲥⲟϥ ϩⲓϫⲉⲛ ⲡⲑⲣⲟⲛⲟⲥ ⲛ̀ⲑⲙⲉⲧⲟⲩⲣⲟ ⲛ̀ⲛⲓⲣⲱⲙⲉⲟⲥ ⲟⲩⲟϩ ⲁϥⲕⲱϯ ⲛ̀ⲥⲁ ⲫϯ ϧⲉⲛ ⲟⲩϩⲏⲧ ⲙ̀ⲙⲏⲓ ⲟⲩⲟϩ ⲁϥϫⲉⲙϥ ⲁϥϣⲱⲡⲓ ⲛⲉⲙⲁϥ ⲁϥϭⲓ ⲙ̀ⲡⲥⲱⲟⲩⲛ ⲛ̀ⲧⲉ ⲫⲛⲁϩϯ ⲉϧⲟⲩⲛ ⲉ ⲡⲭ︤ⲥ︥ ⲫϯ ⲙ̀ⲙⲏⲓ.</em></p>
+				<p><em>ⲛ̀ϩⲣⲏⲓ ⲇⲉ ϧⲉⲛ ⲛⲓⲉϩⲟⲟⲩ ⲉⲧⲉⲙⲙⲁⲩ ⲁϥⲥϧⲁⲓ ⲛ̀ⲟⲩⲡⲣⲟⲥⲧⲁⲅⲙⲁ ⲉⲃⲟⲗ ϧⲉⲛ ⲧⲉϥⲙⲉⲧⲟⲩⲣⲟ ⲧⲏⲣⲥ ⲛⲉⲙ ⲉϧⲣⲏⲓ ⲉ ⲭⲏⲙⲓ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ.</em></p>
+				<p><em>ⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲥ ⲫⲏ ⲉⲧϧⲏⲕ ϧⲁⲣⲁⲧϥ ⲙ̀ⲡⲓⲟⲩⲣⲟ ⲛ̀ⲁⲑⲙⲟⲩ ⲡⲭ︤ⲥ︥ ⲡⲟⲩⲣⲟ ⲛ̀ⲧⲉ ⲛⲓⲟⲩⲣⲱⲟⲩ ⲟⲩⲟϩ ⲡϭⲟⲓⲥ ⲛ̀ⲧⲉ ⲛⲓϭⲟⲓⲥ ⲫⲏ ⲉⲧⲉ ⲟⲩⲟⲛⲧⲁϥ ⲛ̀ϯⲉⲝⲟⲩⲥⲓⲁ ϧⲉⲛ ⲧⲫⲉ ⲛⲉⲙ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲉⲓⲥϧⲁⲓ ⲛ̀ⲛⲓⲗⲁⲟⲥ ⲧⲏⲣⲟⲩ ⲉⲧϧⲁ ⲡⲉⲛⲁⲙⲁϩⲓ ⲭⲉⲣⲉⲧⲉ.</em></p>
 				<p><em></em></p>
 				<p><em></em></p>
 				<p><em></em></p>
