--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -16856,8 +16856,8 @@
 				<p><em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲁ ⲫϯ ϣⲁⲣⲓ ⲉ ⲇⲓⲟⲕⲗⲏⲧⲓⲁⲛⲟⲥ ϧⲉⲛ ⲟⲩⲙⲉⲧⲃⲉⲗⲗⲉ ⲟⲩⲟϩ ⲁ ⲛⲓⲥⲩⲛⲕⲗⲏⲧⲓⲕⲟⲥ ⲛⲉⲙ ⲛⲓⲥⲧⲣⲁⲧⲏⲗⲁⲧⲏⲥ ⲛⲉⲙ ⲛⲓⲛⲓϣϯ ⲛ̀ⲧⲉ ϯⲙⲉⲧⲟⲩⲣⲟ ⲧⲏⲣⲟⲩ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲉϫⲱϥ ⲁⲩϩⲓⲧϥ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲙⲉⲧⲟⲩⲣⲟ ⲟⲩⲟϩ ⲁⲩⲉⲛ ⲛⲟⲩϫⲓϫ ⲉϫⲉⲛ ⲟⲩ ϧⲉⲗϣⲓⲣⲓ ⲛ̀ⲥⲁⲓⲉ ⲉ ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲥ ⲛⲉ ⲟⲩⲥⲧⲣⲁⲧⲏⲗⲁⲧⲏⲥ ⲡⲉ ⲟⲩⲟϩ ⲁⲩⲁⲓϥ ⲛ̀ⲟⲩⲣⲟ ⲁⲩⲧϩⲉⲙⲥⲟϥ ϩⲓϫⲉⲛ ⲡⲑⲣⲟⲛⲟⲥ ⲛ̀ⲑⲙⲉⲧⲟⲩⲣⲟ ⲛ̀ⲛⲓⲣⲱⲙⲉⲟⲥ ⲟⲩⲟϩ ⲁϥⲕⲱϯ ⲛ̀ⲥⲁ ⲫϯ ϧⲉⲛ ⲟⲩϩⲏⲧ ⲙ̀ⲙⲏⲓ ⲟⲩⲟϩ ⲁϥϫⲉⲙϥ ⲁϥϣⲱⲡⲓ ⲛⲉⲙⲁϥ ⲁϥϭⲓ ⲙ̀ⲡⲥⲱⲟⲩⲛ ⲛ̀ⲧⲉ ⲫⲛⲁϩϯ ⲉϧⲟⲩⲛ ⲉ ⲡⲭ︤ⲥ︥ ⲫϯ ⲙ̀ⲙⲏⲓ.</em></p>
 				<p><em>ⲛ̀ϩⲣⲏⲓ ⲇⲉ ϧⲉⲛ ⲛⲓⲉϩⲟⲟⲩ ⲉⲧⲉⲙⲙⲁⲩ ⲁϥⲥϧⲁⲓ ⲛ̀ⲟⲩⲡⲣⲟⲥⲧⲁⲅⲙⲁ ⲉⲃⲟⲗ ϧⲉⲛ ⲧⲉϥⲙⲉⲧⲟⲩⲣⲟ ⲧⲏⲣⲥ ⲛⲉⲙ ⲉϧⲣⲏⲓ ⲉ ⲭⲏⲙⲓ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ.</em></p>
 				<p><em>ⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲥ ⲫⲏ ⲉⲧϧⲏⲕ ϧⲁⲣⲁⲧϥ ⲙ̀ⲡⲓⲟⲩⲣⲟ ⲛ̀ⲁⲑⲙⲟⲩ ⲡⲭ︤ⲥ︥ ⲡⲟⲩⲣⲟ ⲛ̀ⲧⲉ ⲛⲓⲟⲩⲣⲱⲟⲩ ⲟⲩⲟϩ ⲡϭⲟⲓⲥ ⲛ̀ⲧⲉ ⲛⲓϭⲟⲓⲥ ⲫⲏ ⲉⲧⲉ ⲟⲩⲟⲛⲧⲁϥ ⲛ̀ϯⲉⲝⲟⲩⲥⲓⲁ ϧⲉⲛ ⲧⲫⲉ ⲛⲉⲙ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲉⲓⲥϧⲁⲓ ⲛ̀ⲛⲓⲗⲁⲟⲥ ⲧⲏⲣⲟⲩ ⲉⲧϧⲁ ⲡⲉⲛⲁⲙⲁϩⲓ ⲭⲉⲣⲉⲧⲉ.</em></p>
-				<p><em></em></p>
-				<p><em></em></p>
+				<p><em>ⲧⲉⲧⲉⲛⲥⲱⲟⲩⲛ ⲧⲏⲣⲟⲩ ⲛ̀ϯⲛⲓϣϯ ⲙ̀ⲡⲗⲁⲛⲏ ⲛⲉⲙ ϯⲙⲉⲧⲁⲑⲛⲟⲩϯ ⲉⲧⲉⲣⲡⲟⲗⲓⲧⲉⲩⲉⲥⲑⲉ ϧⲉⲛ ϯⲟⲓⲕⲟⲩⲙⲉⲛⲏ ⲧⲏⲣⲥ ⲉⲑⲃⲉ ϯⲫⲑⲟⲛⲏⲣⲓⲁ ⲛ̀ⲧⲟⲗⲙⲏⲣⲟⲛ ⲛ̀ⲧⲉ ⲫⲏ ⲉⲧⲁϥϭⲱϧⲉⲙ ⲙ̀ⲡⲓⲕⲁϩⲓ ⲛⲉⲙ ⲡⲓⲁⲏⲣ ϧⲉⲛ ⲛⲓⲑⲩⲥⲓⲁ ⲙ̀ⲃⲟϯ ⲛ̀ⲧⲉ ⲛⲓⲓⲇⲱⲗⲟⲛ ⲟⲩⲟϩ ⲁϥϧⲱⲧⲉⲃ ⲛ̀ϩⲁⲛⲑⲃⲁ ⲛ̀ⲇⲓⲕⲉⲟⲥ ⲙ̀ⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲃⲉ ⲧⲉϥⲕⲁⲧⲁⲫⲣⲟⲛⲏⲥⲓⲥ ⲟⲩⲟϩ ⲁϥⲭⲱ ⲛ̀ⲥⲱϥ ⲙ̀ⲫϯ ⲫⲏ ⲉⲧⲉϥⲥⲱⲟⲩⲛ ⲙ̀ⲙⲟϥ ⲛ̀ϣⲟⲣⲡ ⲉⲑⲃⲉ ⲧⲉϥⲙⲁⲛⲓⲁ ⲉⲧϩⲱⲟⲩ ⲡⲓⲧⲁⲗⲉⲡⲱⲣⲟⲥ ⲇⲓⲟⲕⲗⲏⲧⲓⲁⲛⲟⲥ ⲫⲏ ⲉⲧⲁ ⲡⲭ︤ⲥ︥ ⲧⲁⲕⲟϥ ϧⲉⲛ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲛ̀ⲧⲉ ⲧⲉϥⲟⲣⲅⲏ ⲁⲛⲟⲛ ⲇⲉ ⲛⲁⲛⲟⲓ ⲛ̀ⲁⲧⲉⲙⲓ ⲡⲉ ⲉⲧⲉϥⲙⲉⲧⲛⲓϣϯ ⲟⲩⲟϩ ⲁϥⲉⲣⲟⲩⲱⲓⲛⲓ ⲉ ϯⲙⲉⲧⲃⲉⲗⲗⲉ ⲛ̀ⲧⲉ ⲡⲁⲕⲁϯ ϩⲓⲧⲉⲛ ⲡⲉϥⲟⲩⲱⲓⲛⲓ ⲉⲧⲟⲓ ⲛ̀ϣⲫⲏⲣⲓ ⲉⲑⲃⲉ ⲫⲁⲓ ⲧⲉⲛϯⲱⲟⲩ ⲟⲩⲟϩ ⲧⲉⲛϭⲓⲥⲓ ⲟⲩⲟϩ ⲧⲉⲛⲥⲙⲟⲩ ⲟⲩⲟϩ ⲧⲉⲛⲟⲩⲱϣⲧ ⲙ̀ⲡⲉⲛϭⲟⲓⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲛⲉⲙ ⲡⲉϥⲓⲱⲧ ⲛ̀ⲁⲅⲁⲑⲟⲥ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ.</em></p>
+				<p><em>ϯⲉⲣⲕⲉⲗⲉⲩⲓⲛ ⲇⲉ ⲉⲑⲣⲉ ⲣⲱⲙⲓ ⲛⲓⲃⲉⲛ ⲭⲱ ⲛ̀ⲥⲱⲟⲩ ⲛ̀ⲛⲓⲙⲉⲧⲉⲫⲗⲏⲟⲩ ⲛ̀ⲧⲉ ⲛⲓⲓⲇⲱⲗⲟⲛ ⲛ̀ⲁⲯⲩⲭⲟⲛ ⲛ̀ⲥⲉⲟⲩⲱϣⲧ ⲙ̀ⲫϯ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲑⲛⲁϣⲉⲙϣⲓ ⲛ̀ⲛⲓⲓⲇⲱⲗⲟⲛ ⲉⲩⲉ̀ⲉⲣⲉⲝⲱⲣⲓⲍⲓⲛ ⲙ̀ⲙⲱⲟⲩ ⲛ̀ⲥⲉⲧⲏⲓⲧⲟⲩ ⲉ ϩⲁⲛⲇⲩⲙⲱⲣⲓⲁ ⲛⲉⲙ ⲫⲙⲟⲩ ⲟⲩⲟϩ ⲛⲟⲩϩⲩⲡⲁⲣⲭⲟⲛⲧⲁ ⲉⲩⲉϩⲟⲗⲙⲟⲩ. ⲛⲟⲩⲉⲣⲫⲏⲟⲩⲓ ⲉⲩⲉϣⲉⲣϣⲱⲣⲟⲩ ⲛⲟⲩⲓⲇⲱⲗⲟⲛ ⲉⲩⲉⲟⲩⲟϫⲡⲟⲩ. ⲟⲩⲟϩ ⲛⲟⲩⲟⲩⲏⲃ ⲉⲩⲉϧⲟⲑⲃⲟⲩ ⲛ̀ⲧⲥⲏϥⲓ ϩⲓⲛⲁ ϧⲉⲛ ⲟⲩϫⲱⲕ ⲛ̀ⲧⲉ ⲧⲁⲓⲡⲗⲁⲛⲏ ⲕⲱⲣϥ ϧⲉⲛ ⲡⲓⲕⲟⲥⲙⲟⲥ ⲧⲏⲣϥ ⲟⲩⲟϩ ⲛ̀ⲧⲉ ⲫⲣⲁⲛ ⲙ̀ⲡϭⲟⲓⲥ ϭⲓⲱⲟⲩ ϧⲉⲛ ϯⲟⲓⲕⲟⲩⲙⲉⲛⲏ ⲧⲏⲣⲥ.</em></p>
 				<p><em></em></p>
 				<p><em></em></p>
 				<p><em></em></p>
