--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -16865,6 +16865,15 @@
 				<p><em>ⲫⲁⲓ ⲇⲉ ϫⲉ ⲉⲩⲗⲟⲅⲓⲟⲥ ⲛⲁⲣⲉ ⲡⲟⲩⲣⲟ ⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲥ ⲥⲱⲟⲩⲛ ⲙ̀ⲙⲟϥ ϫⲉ ⲟⲩ ⲉⲃⲟⲗ ⲡⲉ ϧⲉⲛ ⲟⲩⲛⲟⲩⲛⲓ ⲉⲥⲧⲁⲓⲏⲟⲩⲧ ⲟⲩⲟϩ ⲙ̀ⲙⲁⲣⲧⲩⲣⲟⲥ ⲟⲩⲟϩ ⲁϥⲙⲟⲩϯ ⲉⲣⲟϥ ⲁϥⲑⲱⲕⲉⲙ ⲛ̀ⲧⲉϥⲥⲏϥⲓ ⲙ̀ⲙⲓⲛ ⲙ̀ⲙⲟϥ ⲛ̀ϫⲉ ⲡⲟⲩⲣⲟ ⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲥ ⲟⲩⲟϩ ⲁϥⲧⲏⲓⲥ ⲛⲁϥ ⲛⲉⲙ ⲑⲃⲁ ⲥⲛⲁⲩ ⲙ̀ⲙⲁⲧⲟⲓ ⲛ̀ⲇⲓⲛⲁⲧⲟⲥ ⲟⲩⲟϩ ⲁϥϯ ⲛⲁϥ ⲛ̀ⲟⲩⲛⲓϣϯ ⲛ̀ⲉⲣϣⲓϣⲓ ⲛⲉⲙ ⲟⲩⲝⲟⲩⲥⲓⲁ ⲉⲑⲣⲉϥϧⲱⲧⲉⲃ ⲛ̀ⲛⲓϩⲉⲗⲗⲏⲛⲟⲥ ⲧⲏⲣⲟⲩ ⲓⲧⲉ ⲕⲟⲙⲏⲥ ⲓⲧⲉ ϩⲏⲅⲉⲙⲱⲛ ⲓⲧⲉ ⲙⲁⲧⲟⲓ ⲓⲧⲉ ⲡⲁⲅⲁⲛⲟⲥ ⲓⲧⲉ ⲁⲣⲭⲱⲛ ⲓⲧⲉ ϩⲏⲕⲓ ⲓⲧⲉ ⲣⲁⲙⲁⲟ ⲓⲥϫⲉⲛ ⲡⲓⲡⲁⲗⲁⲧⲓⲟⲛ ⲛ̀ⲧⲉ ⲁⲛⲧⲓⲟⲭⲓⲁ ϣⲁ ⲛⲓⲙⲁⲛϩⲱⲧⲡ ⲛ̀ⲧⲉ ⲫⲣⲏ<sup class="footnote">1</sup> ⲛⲉⲙ ϣⲁ ⲡⲕⲁϩⲓ ⲛ̀ⲛⲓ ⲉⲑⲁⲩϣ ⲉⲩⲉϧⲟⲑⲃⲟⲩ ⲧⲏⲣⲟⲩ ⲉⲃⲏⲗ ⲉ ⲛⲏ ⲉⲑⲛⲁⲉⲣⲟⲙⲟⲗⲟⲅⲓⲛ ⲙ̀ⲡⲭ︤ⲥ︥ ⲟⲩⲟϩ ⲛ̀ⲥⲉϣⲱⲡⲓ ⲛ̀ⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ.</em></p>
 				<p class="footnote">1. Cod. <em>ⲫⲣⲉ</em></p>
 				<p><em>ⲉⲩⲗⲟⲅⲓⲟⲥ ⲇⲉ ⲁϥⲓ̀ ⲉϧⲟⲩⲛ ⲉ ⲣⲁⲕⲟϯ ϧⲉⲛ ⲟⲩⲛⲓϣϯ ⲛ̀ϫⲟⲙ ⲟⲩⲟϩ ⲟⲩⲛⲓϣϯ ⲛ̀ⲫⲟⲃⲟⲥ ⲛ̀ⲣⲁϣⲓ ⲁϥϣⲱⲡⲓ ϧⲉⲛ ⲛⲓⲗⲁⲟⲥ ⲛ̀ⲧⲉ ⲛⲓⲡⲓⲥⲧⲟⲥ ⲟⲩⲟϩ ⲟⲩϩⲟϯ ⲉⲛⲁϣⲱⲥ ⲁⲥⲓ̀ ⲉϫⲉⲛ ⲛⲓϣⲁⲙϣⲉⲓⲇⲱⲗⲟⲛ ⲥⲁⲧⲟⲧϥ ⲇⲉ ⲁϥϧⲱⲧⲉⲃ ⲙ̀ⲡⲓⲕⲟⲙⲏⲥ ⲛ̀ⲧⲉ ⲣⲁⲕⲟϯ ⲛ̀ⲧⲥⲏϥⲓ ⲟⲩⲟϩ ⲁϥⲑⲁⲙⲓⲟ ⲛ̀ϩⲁⲛⲫⲟⲥⲥⲁ ⲛ̀ⲭⲣⲱⲙ ⲁϥⲥⲓϯ ⲉϧⲣⲏⲓ ⲉⲣⲱⲟⲩ ⲛ̀ϩⲁⲛⲑⲃⲁ ⲛ̀ϩⲉⲗⲗⲏⲛⲟⲥ ⲁϥⲣⲟⲕϩⲟⲩ ⲉⲩⲟⲛϧ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲭⲣⲱⲙ ⲙ̀ⲡⲓⲕⲟⲥⲙⲟⲥ ⲉϧⲟⲩⲛ ⲉ ⲡⲓⲭⲣⲱⲙ ⲛⲁⲧϭⲉⲛⲟ ⲛ̀ⲧⲉ ϯⲅⲉⲉⲛⲛⲁ ⲙ̀ⲫⲣⲏϯ ⲉⲧⲁⲩⲣⲱⲕϩ ⲙ̀ⲡⲥⲱⲙⲁ ⲛ̀ⲛⲓⲇⲓⲕⲉⲟⲥ ⲙ̀ⲙⲁⲣⲧⲩⲣⲟⲥ ϯⲛⲁⲣⲱⲕϩ ϩⲱ ⲛ̀ⲛⲟⲩⲥⲁⲣⲝ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲫⲏⲟⲩⲓ ⲛⲉⲙ ⲛⲟⲩⲓⲇⲱⲗⲟⲛ ⲟⲩⲟϩ ⲁϥϩⲓⲭⲣⲱⲙ ⲉ ⲛⲓⲉⲣⲫⲏⲟⲩⲓ ⲛ̀ⲧⲉ ⲣⲁⲕⲟϯ ⲟⲩⲟϩ ⲁⲣϣⲉⲣϣⲱⲣⲟⲩ ⲟⲩⲟϩ ⲁϥϩⲱⲗⲉⲙ ⲛ̀ⲛⲟⲩⲭⲣⲏⲙⲁ.</em></p>
+				<p><em>ⲡⲁⲓⲣⲏϯ ⲁϥⲕⲱⲧ ⲛ̀ϩⲁⲛⲙⲏϣ ⲛ̀ⲉⲕⲕⲗⲏⲥⲓⲁ ⲟⲩⲟϩ ⲟⲩⲛⲓϣϯ ⲛ̀ϩⲟϯ ⲁⲥⲓ̀ ⲉϫⲉⲛ ⲛⲓϣⲁⲙϣⲉⲓ̀ⲇⲱⲗⲟⲛ ⲧⲏⲣⲟⲩ ⲟⲩⲟϩ ⲛⲁⲩⲫⲏⲧ ⲡⲉ ⲕⲁⲧⲁ ⲙⲁ ⲉⲃⲟⲗ ϧⲁⲧϩⲏ ⲙ̀ⲡⲉϥϩⲟ ⲉⲧⲁϥⲥⲱⲧⲉⲙ ⲇⲉ ⲉⲑⲃⲏⲧϥ ⲛ̀ϫⲉ ⲥⲱⲧⲏⲣⲓⲭⲟⲥ ⲡⲓⲉⲡⲁⲣⲭⲟⲥ ⲛ̀ⲧⲉ ϯⲡⲟⲗⲓⲥ ⲃⲟⲩϣⲏⲙ ⲁϥⲣⲁϣⲓ ⲉⲙⲁϣⲱ ⲉⲡⲓⲇⲏ ⲛⲉ ⲟⲩⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲡⲉ ⲟⲩⲟϩ ϧⲉⲛ ⲟⲩⲉⲝⲁⲡⲓⲛⲁ ⲁϥⲧⲱⲛϥ ⲛⲉⲙ ⲛⲉϥⲙⲁⲧⲟⲓ ⲛⲉⲙ ⲛⲉϥⲁⲗⲱⲟⲩⲓ ⲟⲩⲟϩ ⲁϥϣⲟⲣϣⲉⲣ ⲛ̀ⲛⲓⲉⲣⲫⲏⲟⲩⲓ ⲧⲏⲣⲟⲩ ⲛ̀ⲧⲉ ⲧⲉϥⲡⲟⲗⲓⲥ.</em></p>
+				<p><em></em></p>
+				<p><em></em></p>
+				<p><em></em></p>
+				<p><em></em></p>
+				<p><em></em></p>
+				<p><em></em></p>
+				<p><em></em></p>
+				<p><em></em></p>
 				<p><em></em></p>
 				<p><em></em></p>
 				<p><em></em></p>
