--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -16882,32 +16882,55 @@
 			<div>
 				<h3>II. Textes des différents dialectes.</h3>
 				<p>Principales différences des dialectes entr'eux.</p>
-				<p></p>
-				<p></p>
-				<p></p>
-				<p></p>
-				<p></p>
-				<p></p>
-				<p></p>
-				<p></p>
-				<p></p>
+				<p>Les cinq dialectes coptes connus se divisent en trois groupes:</p>
+				<p>Le groupe de la <i>Basse Égypte</i>, représenté par le seul dialecte <i>boḥairique</i>.</p>
+				<p>Le groupe de la <i>Moyenne-Égypte</i> qui contient le <i>Memphitique</i> et le <i>Fayoumique</i>.</p>
+				<p>Le groupe de la <i>Haute-Égypte</i> qui comprend l'<i>Achmimique</i> et le <i>Ṣaꜥîdique</i>.</p>
+				<p>Les différences philologiques qui règnent entre ces dialectes sont plus ou moins grandes selon que leurs lieux d'origine et d'emploi sont plus ou moins éloignés. Le Boḥairique à Alexandrie et le Ṣaꜥîdique en Thébaïde, constituent les deux points extrêmes; les trois autres dialectes, les intermédiaires. Le groupement grammatical et phonétique correspond à peu près à la distribution géographique.</p>
+				<p>Il faut cependant remarquer que les quatre dialectes de la Moyenne et de la Haute-Égypte sont plus rapprochés entr'eux que du Boḥairique. Celui-ci forme une division bien distincte et possède des caractéristiques bien tranchées.</p>
+				<p>Le Ṣaꜥîdique et le Boḥairique sont de beaucoup les plus riches et les plus importants; les trois autres, surtout le Memphitique, n'ont jusqu'ici fourni qu'une quantité relativement peu considérable de documents. On en jugera par la liste des ouvrages coptes dressée à la fin de la grammaire.</p>
+				<p>Comme langue parlée, c'est le Ṣaꜥîdique qui s'est maintenu le plus longtemps. Quelques villages de la Haute-Égypte le conservèrent jusqu'au 17<sup>e</sup> siècle, tandis que le Boḥairique avait, dès le 12<sup>e</sup> siècle, entièrement disparu devant l'arabe.</p>
+				<p>Voici les principales différences qui existent entre les cinq dialectes. Ces différences portent sur les consonnes et sur les voyelles.</p>
 				<h4>I. Différences dans les consonnes.</h4>
 				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li>
+						<p>Le Boḥairique possède les trois aspirées <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>.</p>
+						<p>Les autres dialectes n'ont que les ténues <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em>.</p>
+					</li>
+					<li>
+						<p>Le Boḥairique a deux signes pour les gutturales: <i>h</i> <i>ḥ</i> et <i>ḫ</i> (<em class="ar">خ</em>). <em>ϩ</em> = <i>h</i>, <i>ḥ</i>; <em>ϧ</em> = <i>ḫ</i>.</p>
+						<p>Les deux dialectes de la M. É. et le Ṣaꜥîdique n'en ont qu'un: <em>ϩ</em>.</p>
+						<p>L'Achmimique a le <em>ϩ</em> et le <em>ϩ</em> barré <em>ⳉ</em> qui correspond au <em>ϧ</em> boḥairique, à <em>ϣ</em> et à <em>ϫ</em> quand il est combiné avec <em>ⲧ</em>.</p>
+					</li>
+					<li>
+						<p>En Boḥairique, le <i>q</i> et le <i>g</i> égyptiens deviennent quelquefois <em>ϫ</em>, mais <em>ϭ</em> en Ṣaꜥîdique; tandis qu'au contraire le <i>t</i> égyptien devient <em>ϭ</em> en B. et <em>ϫ</em> en Ṣ.</p>
+						<p>Dans l'emploi de ces deux lettres <em>ϫ</em> <em>ϭ</em>, les autres se rapprochent plus du Ṣaꜥîdique que du Boḥairique.</p>
+					</li>
+					<li>
+						<p>Le <em>ⲥ</em> boḥairique est souvent remplacé par <em>ϣ</em> dans les autres dialectes, <em>ⲥⲁϫⲓ</em>: <em>ϣⲁϫⲓ</em> «parler».</p>
+					</li>
 				</ol>
 				<h4>II. Différences dans les voyelles.</h4>
 				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li>
+						<p>La voyelle auxiliaire finale <em>ⲓ</em> en B. est représentée par <em>ⲉ</em> en Ṣ. <em>ⲣⲱⲙⲓ</em>: <em>ⲣⲱⲙⲉ</em>.</p>
+						<p>Le Memphitique et le Fayoumique suivent le Boḥairique et retiennent <em>ⲓ</em>, l'Achmimique suit le Ṣaꜥîdique. De plus, <em>ⲓ</em> B. radical est en Ṣ. écrit <em>ⲉⲓ</em> au commencement des mots et <em>ⲓ̈</em> à l'intérieur ou à la fin: <em>ⲉⲓⲱⲧ</em> = <em>ⲓⲱⲧ</em> «père»; <em>ⲡⲁⲓ̈</em>, <em>ⲧⲁⲓ̈</em>, <em>ⲛⲁⲓ̈</em> = <em>ⲫⲁⲓ</em>, <em>ⲑⲁⲓ</em>, <em>ⲛⲁⲓ</em>.</p>
+						<p>Les noms et les verbes boḥairiques terminés en <em>ⲁⲓ</em>, <em>ⲉⲓ</em>, <em>ⲏⲓ</em>, <em>ⲟⲩⲓ</em> ont perdu la voyelle finale en Ṣaꜥîdique, <em>ⲛⲁⲓ</em>: <em>ⲛⲁ</em> «miséricorde», <em>ϣⲁⲓ</em>: <em>ϣⲁ</em> «fête», <em>ⲛ̀ⲭⲁⲓ</em>: <em>ⲛⲕⲁ</em> «chose»; <em>ϩⲉⲓ</em>: <em>ϩⲉ</em> «tomber», <em>ⲉⲣⲫⲉⲓ</em>: <em>ⲉⲣⲡⲉ</em> «temple», <em>ⲙⲉⲓ</em>: <em>ⲙⲉ</em> «aimer»; <em>ⲁⲗⲏⲓ</em>: <em>ⲁⲗⲉ</em> «monter», <em>ⲙⲏⲓ</em>: <em>ⲙⲉ</em> «juste», <em>ⲛⲟⲩⲓ</em>: <em>ⲛⲟⲩ</em> «être sur le point de», <em>ⲥⲁϩⲟⲩⲓ</em>: <em>ⲥⲁϩⲟⲩ</em> «maudire».</p>
+					</li>
+					<li>
+						<p>Plusieurs mots qui ont un <em>ⲁ</em> en B. ont un <em>ⲉ</em> en Ṣ. et dans les autres dialectes: <em>ⲟⲩϫⲁⲓ</em>: <em>ⲟⲩϫⲉⲓ</em>.</p>
+					</li>
+					<li>
+						<p>Une voyelle simple en B. est souvent double en Ṣ. <em>ϣⲉⲣⲓ</em>: <em>ϣⲉⲉⲣⲉ</em> «fille», <em>ϫⲱⲣⲓ</em>: <em>ϫⲱⲱⲣⲉ</em> «être fort».</p>
+					</li>
+					<li>
+						<p>Enfin les deux dialectes de la M. É. et l'Achmimique se distinguent par le fréquent êmploi de <em>ⲁ</em>, là où les deux autres dialectes auraient <em>ⲟ</em> et même <em>ⲉ</em>: <em>ⲉⲃⲟⲗ</em> B. Ṣ. <em>ⲉⲃⲁⲗ</em> M. F. <em>ⲁⲃⲁⲗ</em> A.</p>
+					</li>
 				</ol>
+				<p>Mais c'est avant tout par l'étude comparée des textes qu'on acquerra la connaissance des dialectes coptes.</p>
 				<h5>Zacharie V.</h5>
-				<h6></h6>
-				<h6></h6>
+				<h6>Boḥairique</h6>
+				<h6>Ṣaꜥîdique</h6>
 				<h6>Achmimique</h6>
 				<p>Notes.</p>
 			</div>
